wescamp.py: Update from add-on server

--- a/For_Power/macros/redeem.cfg
+++ b/For_Power/macros/redeem.cfg
@@ -63,6 +63,15 @@
   [/damage]
 #enddef
 
+#define WEAPON_SPECIAL_REDEEM_7
+  [damage]
+    id=redeem 7
+    name= _ "redeem"
+    description= _ "Redeem:
+    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. All targets are absorbed with a 100% chance to succeed. Experience is not gained."
+  [/damage]
+#enddef
+
 #define GENERIC_REDEEM_EVENT NAME L0 L1 L2 L3 L4 L5
   [event]
     name=attacker hits
@@ -111,7 +120,7 @@
       [and]
         [variable]
           name=luck
-          greater_than={L2}
+          less_than={L2}
           [/variable]
        [/and]
        [then]
@@ -126,7 +135,7 @@
       [and]
         [variable]
           name=luck
-          greater_than={L3}
+          less_than={L3}
         [/variable]
       [/and]
       [then]
@@ -141,7 +150,7 @@
       [and]
         [variable]
           name=luck
-          greater_than={L4}
+          less_than={L4}
         [/variable]
       [/and]
       [then]
@@ -156,7 +165,7 @@
       [and]
         [variable]
           name=luck
-          greater_than={L5}
+          less_than={L5}
         [/variable]
       [/and]
       [then]
@@ -201,6 +210,7 @@
   {GENERIC_REDEEM_EVENT 4 100 100 100 100 85 65}
   {GENERIC_REDEEM_EVENT 5 100 100 100 100 100 80}
   {GENERIC_REDEEM_EVENT 6 100 100 100 100 100 100}
+  {GENERIC_REDEEM_EVENT 7 100 100 100 100 100 100}
   [event]
     name=redeem
     first_time_only=no
@@ -281,10 +291,10 @@
             [if]
               [variable]
                 name=upgrade_count
-                greater_than=6
+                greater_than=7
               [/variable]
               [then]
-                {VARIABLE upgrade_count 6}
+                {VARIABLE upgrade_count 7}
               [/then]
             [/if]
             [switch]
@@ -386,11 +396,11 @@
                       apply_to=resistance
                       replace=false
                       [resistance]
-                        blade=-1
-                        pierce=-1
-                        impact=-2
+                        blade=-2
+                        pierce=-2
+                        impact=-3
                         fire=-2
-                        cold=-1
+                        cold=-2
                         arcane=-2
                       [/resistance]
                     [/effect]
@@ -421,10 +431,12 @@
                       apply_to=resistance
                       replace=false
                       [resistance]
-                        blade=-1
-                        pierce=-1
-                        fire=-1
-                        arcane=-1
+                        blade=-2
+                        pierce=-2
+                        impact=-2
+                        fire=-2
+                        cold=-3
+                        arcane=-3
                       [/resistance]
                     [/effect]
                     [effect]
@@ -454,6 +466,42 @@
                       apply_to=resistance
                       replace=false
                       [resistance]
+                        blade=-2
+                        pierce=-2
+                        impact=-1
+                        fire=-1
+                        cold=-1
+                        arcane=-1
+                      [/resistance]
+                    [/effect]
+                    [effect]
+                      apply_to=hitpoints
+                      increase_total=5
+                    [/effect]
+                  [/value]
+                [/set_variables]
+              [/case]
+              [case]
+                value=7
+                [set_variables]
+                  name=redeemer.modifications.advance[$redeemer.modifications.advance.length]
+                  mode=replace
+                  [value]
+                    id=redeem_advance
+                    [effect]
+                      apply_to=attack
+                      name="redeem"
+                      remove_specials=redeem 6
+                      [set_specials]
+                        mode=append
+                        {WEAPON_SPECIAL_REDEEM_7}
+                      [/set_specials]
+                    [/effect]
+                    [effect]
+                      apply_to=resistance
+                      replace=false
+                      [resistance]
+                        fire=-1
                         arcane=-1
                       [/resistance]
                     [/effect]
@@ -463,6 +511,7 @@
                     [/effect]
                   [/value]
                 [/set_variables]
+                {VARIABLE redeemer.modifications.advance[$redeemer.modifications.advance.length].id redeem_mastery}
               [/case]
             [/switch]
             [unstore_unit]
