--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -247,7 +247,7 @@
       amount=$glacyn_gold
     [/gold]
 		[objectives]
-			side=1
+			side=1,5
 			[objective]
 				description= _ "Defeat all enemy leaders"
 				condition=win
@@ -323,7 +323,58 @@
 			message=_"Yes, we shall avenge our dead, may they rest in peace."
 		[/message]
 	[/event]
-
+  
+  [event]
+    name=last breath
+    [filter]
+      id=orc1
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Someone will avenge me. Be sure about it!"
+    [/message]
+  [/event]
+  
+	[event]
+	  name=die
+	  [filter]
+	    id=orc1
+	  [/filter]
+	  [message]
+			speaker=orc2
+			message=_"I won't get killed so easily as he did! Under my banner, orcs!"
+		[/message]
+		[if]
+		  [have_unit]
+		    id=orc2
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=3 side 4}
+		    {TRANSFER_VILLAGE_OWNERSHIP 3 4}
+		  [/then]
+		[/if]
+	[/event]
+	
+	[event]
+	  name=die
+	  [filter]
+	    id=orc2
+	  [/filter]
+	  [message]
+			speaker=orc1
+			message=_"Bah! He was weak and deserved to die! Orcs, to me!"
+		[/message]
+		[if]
+		  [have_unit]
+		    id=orc1
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=4 side 3}
+		    {TRANSFER_VILLAGE_OWNERSHIP 4 3}
+		  [/then]
+		[/if]
+	[/event]
+	
 	[event]
 		name=enemies defeated
 		[message]
