--- a/For_Power/scenarios/05_A_Mage.cfg
+++ b/For_Power/scenarios/05_A_Mage.cfg
@@ -276,7 +276,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"He will pay for it! Of course when we find him!"
+		  message=_"It seems that the words of orcish warlord came true. Anyhow he will pay for it! Of course when we find him!"
 		[/message]
 		[message]
 		  speaker=Lemyr
