--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -14,6 +14,24 @@
   [/unit]
 #enddef
 
+#define TENTACLE X Y
+  [unit]
+    type=Tentacle of the Deep
+    side=3
+    x,y={X},{Y}
+    animate=no
+  [/unit]
+#enddef
+
+#define WATER_SERPENT X Y
+  [unit]
+    type=Water Serpent
+    side=3
+    x,y={X},{Y}
+    animate=no
+  [/unit]
+#enddef
+
 [scenario]
 	id=07_Searching_The_Mage
 	name=_"Seeking The Mage"
@@ -48,7 +66,7 @@
 	[side]
 	  side=2
 	  controller=ai
-	  team_name="orcs"
+	  team_name=orcs
 	  user_team_name= _ "Orcs"
 	  
 	  no_leader=yes
@@ -66,6 +84,36 @@
 	  {ORC_GUARD 25 11}
 	  {ORC_GUARD 23 17}
 	[/side]
+  
+  [side]
+    side=3
+    controller=ai
+    team_name=monsters
+    user_team_name= _ "Monsters"
+    
+    no_leader=yes
+    gold=0
+    income=0
+    
+    hidden=yes
+    
+    [ai]
+      [goal]
+        name=target
+        [criteria]
+          side=1
+        [/criteria]
+        value=100
+      [/goal]
+      [goal]
+        name=target
+        [criteria]
+          side=2
+        [/criteria]
+        value=15
+      [/goal]
+    [/ai]
+  [/side]
 	
 	[event]
     name=prestart
@@ -149,6 +197,7 @@
         {TRAIT_RESILIENT}
       [/modifications]
       {IS_LOYAL}
+		  {IS_HERO}
     [/unit]
     [message]
 		  speaker=Merissa
@@ -180,7 +229,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"isn't a really good guy? Yes, Tinry gave me a warning."
+		  message=_"is not a really good guy? Yes, Tinry gave me a warning."
 		[/message]
 		[message]
 		  speaker=Merissa
@@ -219,9 +268,19 @@
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"You are welcome."
+		  message=_"You are welcome. And one thing I heard someone saw some monsters in the river. I never saw them but be careful."
 		[/message]
 		{VARIABLE merissa_alive yes}
+    {TENTACLE 9 11}
+    {TENTACLE 11 11}
+    {TENTACLE 14 12}
+    {TENTACLE 34 15}
+    {WATER_SERPENT 47 11}
+    {WATER_SERPENT 34 15}
+    [modify_side]
+      side=3
+      hidden=no
+    [/modify_side]
   [/event]
   
   [event]
@@ -254,3 +313,5 @@
 [/scenario]
 
 #unddef ORC_GUARD
+#unddef TENTACLE
+#unddef WATER_SERPENT
