--- a/For_Power/scenarios/12_An_Orchish_Town.cfg
+++ b/For_Power/scenarios/12_An_Orchish_Town.cfg
@@ -110,7 +110,7 @@
 	  [/unstore_unit]
 	  [message]
 	    speaker=assassin
-	    message=_"It was me. But what are you going to do with this information, human worm?"
+	    message=_"It was me. He had to pay for death of our warlord. It was impossible to slay him in a battle so I was called to do it in my way. But what are you going to do with this information, human worm?"
 	  [/message]
 	  [message]
 	    speaker=Clare
