--- a/For_Power/scenarios/15b_The_Poison.cfg
+++ b/For_Power/scenarios/15b_The_Poison.cfg
@@ -12,8 +12,8 @@
 	victory_when_enemies_defeated=no
 	{UNDERGROUND}
 	[time_area]
-	  x=0-20,21-24,26-45
-	  y=17-34,22-34,20-34
+	  x=0-20,21-24,26-45,25,26-30,31-34
+	  y=17-34,22-34,20-34,22-34,17-19,18-19
 	  {DEFAULT_SCHEDULE}
 	[/time_area]
 	
@@ -96,7 +96,6 @@
 	  name=prestart
 	  [object]
 	    id=fire_immunity
-	    duration=scenario
 	    silent=yes
 	    [filter]
 	      id=Clare
@@ -354,7 +353,7 @@
 	  [/message]
 	  [message]
 	    speaker=dragon
-	    message=_"Your dark arts couldn't save you from the real power."
+	    message=_"Your dark arts could not save you from the real power."
 	  [/message]
 	  {DEFEAT}
 	[/event]
