--- a/For_Power/scenarios/16a_Another_Orcish_Assault.cfg
+++ b/For_Power/scenarios/16a_Another_Orcish_Assault.cfg
@@ -204,6 +204,38 @@
 	[/event]
 	
 	[event]
+	  name=die
+	  [filter]
+	    id=orc1
+	  [/filter]
+		[if]
+		  [have_unit]
+		    id=orc2
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=3 side 4}
+		    {TRANSFER_VILLAGE_OWNERSHIP 3 4}
+		  [/then]
+		[/if]
+	[/event]
+	
+	[event]
+	  name=die
+	  [filter]
+	    id=orc2
+	  [/filter]
+		[if]
+		  [have_unit]
+		    id=orc1
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=4 side 3}
+		    {TRANSFER_VILLAGE_OWNERSHIP 4 3}
+		  [/then]
+		[/if]
+	[/event]
+	
+	[event]
 	  name=enemies defeated
 	  [message]
 			speaker=Lemyr
