--- a/For_Power/scenarios/18a_The_Last_battle.cfg
+++ b/For_Power/scenarios/18a_The_Last_battle.cfg
@@ -51,7 +51,7 @@
 		gender=female
 		canrecruit=yes
 		
-		recruit=Spearman,Bowman,Mage,Red Mage
+		recruit=Spearman,Bowman,Mage
 		{FLAG_VARIANT loyalist}
 		gold=150
 		income=3
