--- a/For_Power/scenarios/18b_The_Truth.cfg
+++ b/For_Power/scenarios/18b_The_Truth.cfg
@@ -165,6 +165,38 @@
 	[/event]
 	
 	[event]
+	  name=die
+	  [filter]
+	    id=orc1
+	  [/filter]
+		[if]
+		  [have_unit]
+		    id=orc2
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=3 side 4}
+		    {TRANSFER_VILLAGE_OWNERSHIP 3 4}
+		  [/then]
+		[/if]
+	[/event]
+	
+	[event]
+	  name=die
+	  [filter]
+	    id=orc2
+	  [/filter]
+		[if]
+		  [have_unit]
+		    id=orc1
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=4 side 3}
+		    {TRANSFER_VILLAGE_OWNERSHIP 4 3}
+		  [/then]
+		[/if]
+	[/event]
+	
+	[event]
 	  name=enemies defeated
 	  [message]
 			speaker=Lemyr
@@ -293,6 +325,11 @@
 			speaker=Lemyr
 			message=_"I will be back in a few months. Wait for me."
 		[/message]
+    [move_unit]
+      id=Lemyr
+      x=24,33,33,35,35,42,25,25
+      y=31,27,23,22,18,14,6,1
+    [/move_unit]
 		[endlevel]
 		  result=victory
 		  bonus=yes
