--- a/For_Power/scenarios2/01_Return_of_troubles.cfg
+++ b/For_Power/scenarios2/01_Return_of_troubles.cfg
@@ -142,6 +142,8 @@
 		      [modifications]
             {TRAIT_LOYAL}
           [/modifications]
+          {IS_LOYAL}
+		      {IS_HERO}
         [/unit]
         [unit]
           side=1
@@ -156,6 +158,7 @@
             {TRAIT_RESILIENT}
           [/modifications]
           {IS_LOYAL}
+		      {IS_HERO}
         [/unit]
       [/else]
     [/if]
@@ -309,7 +312,7 @@
 		  name= _ "Amiwen"
 		  unrenamable=true
 		  x,y=26,6
-		  unkeep=loyal
+		  upkeep=loyal
 		  animate=yes
 		  {IS_LOYAL}
 		  {IS_HERO}
@@ -320,7 +323,7 @@
 		[/unit]
 		[message]
 		  speaker=Amiwen
-		  message=_"Hello, maiden. Can I join you? This country is not always safety and I could help you."
+		  message=_"Hello, maiden. Can I join you? This country is not always safe and I could help you."
 		[/message]
 		[message]
 			speaker=Clare
