--- a/For_Power/scenarios2/05_The_Countess.cfg
+++ b/For_Power/scenarios2/05_The_Countess.cfg
@@ -488,6 +488,10 @@
 	          name="Clare_Lich_Redeem"
           [/effect]
 	      [/object]
+        [message]
+          speaker=narrator
+          message=_"It is recommended to use this attack from time to time. After redeeming a certain amount of enemies, redeem becomes more effective and the hero will become stronger (more hitpoints and better resistances). After reaching maximum level (7) the one will gain new and very powerfull advancements."
+        [/message]
 	      {VARIABLE book4 yes}
 	      {BOOKS_COUNT}
 	    [/then]
