--- a/For_Power/scenarios2/07_West_Front.cfg
+++ b/For_Power/scenarios2/07_West_Front.cfg
@@ -134,14 +134,6 @@
 				carryover_percentage=40
 			[/gold_carryover]
 		[/objectives]
-    [unit]
-      type=Spearman
-      side=1
-      to_variable=killed[0]
-      generate_name=yes
-      random_traits=yes
-      id=ksjksj
-    [/unit]
     [hide_unit]
       id=Clare
     [/hide_unit]
@@ -180,7 +172,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_""
+      message=_"..."
     [/message]
     [message]
       speaker=Ralenyth
@@ -374,6 +366,7 @@
   
   [event]
     name=last breath
+    first_time_only=no
     [filter]
       id=lich
     [/filter]
