--- a/For_Power/scenarios2/08_Talks_with_Ralenyth.cfg
+++ b/For_Power/scenarios2/08_Talks_with_Ralenyth.cfg
@@ -281,6 +281,7 @@
     {APPEND_MUSIC frantic.ogg}
     {APPEND_MUSIC suspense.ogg}
     {APPEND_MUSIC casualties_of_war.ogg}
+    {VARIABLE undeads_came no}
   [/event]
   
   [event]
@@ -361,6 +362,7 @@
 				carryover_percentage=40
 			[/gold_carryover]
 		[/objectives]
+    {VARIABLE undeads_came yes}
   [/event]
   
   [event]
@@ -382,6 +384,27 @@
 	[/event]
   
   [event]
+    name=side 3 turn
+    first_time_only=no
+    [filter_condition]
+      [variable]
+        name=undeads_came
+        equals=yes
+      [/variable]
+    [/filter_condition]
+    [if]
+	    [have_unit]
+	      side=3
+	    [/have_unit]
+	    [else]
+	      [fire_event]
+	        name=completed
+	      [/fire_event]
+	    [/else]
+	  [/if]
+  [/event]
+  
+  [event]
     name=completed
     [message]
       speaker=Clare
@@ -395,6 +418,7 @@
       speaker=Clare
       message=_"Of course."
     [/message]
+    {CLEAR_VARIABLE undeads_came}
     [endlevel]
 		  result=victory
 		  bonus=yes
