--- a/For_Power/scenarios2/09_Return_to_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/09_Return_to_Dwarven_Doors.cfg
@@ -141,7 +141,7 @@
     [/message]
     [message]
       speaker=outlaw
-      message=_"Can you any alliance's soldier here, maiden? Me not. So this is our territory and you are intruders. Get lost or face our wrath!""
+      message=_"Can you see any alliance's soldier here, maiden? Me not. So this is our territory and you are intruders. Get lost or face our wrath!"
     [/message]
     [modify_side]
       side=2
@@ -158,7 +158,7 @@
 				description= _ "Reach eastern edge of the map" + {NO_EARLY_FINISH_BONUS_NOTE}
 				condition=win
 			[/objective]
-      {ALTERNATIVE_OBJECTIVE_BONUS _"Kill outlaws' leader"}
+      {ALTERNATIVE_OBJECTIVE_BONUS _"Kill the leader of outlaws"}
 			[objective]
 		    description= _ "Destruction of Clare"
 		    condition=lose
@@ -241,6 +241,10 @@
   
   [event]
     name=time over
+    [message]
+      speaker=Clare
+      message=_"We have lost too much time. They called reinforcements. We are doomed."
+    [/message]
   [/event]
   
   [event]
@@ -276,5 +280,3 @@
   {GENERIC_DEATHS}
   {REDEEMING}
 [/scenario]
-
-#undef OUTLAW
