--- a/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
@@ -49,10 +49,10 @@
 [scenario]
 	id=10_Undeads_in_front_of_Dwarven_Doors
 	name=_"Undeads in front of Dwarven Doors"
-	next_scenario=11_Xxx
+	next_scenario=11_Back_in_Dwarven_Doors
 	map_data="{~add-ons/For_Power/maps/10_Undeads_in_front_of_Dwarven_Doors.map}"
 	snapshot=no
-  turns=15
+  turns=25
   disallow_recall=yes
   {SCENARIO_MUSIC traveling_minstrels.ogg}
   {EXTRA_SCENARIO_MUSIC elf-land.ogg}
@@ -85,7 +85,7 @@
 		canrecruit=yes
 
 		{FLAG_VARIANT knalgan}
-		{GOLD 90 80 65}
+		{GOLD 140 130 115}
 		{INCOME 2 1 -2}
 	[/side]
   
@@ -201,7 +201,7 @@
         value="Mal-" + $necromancers[$i].name
       [/set_variable]
       [unstore_unit]
-        variable=necromancer[$i]
+        variable=necromancers[$i]
         find_vacant=no
       [/unstore_unit]
     {NEXT i}
@@ -428,8 +428,8 @@
   {FORCE_CHANCE_TO_HIT type=Dream_Soulless (side=2,3,4 canrecruit=no) 100 ()}
   {FORCE_CHANCE_TO_HIT (side=2,3,4 canrecruit=yes) type=Dream_Walking_Corpse 100 () }
   {FORCE_CHANCE_TO_HIT (side=2,3,4 canrecruit=yes) type=Dream_Soulless 100 () }
-  {FORCE_CHANCE_TO_HIT id=Clare (side=2,3,4 canrecruit=yes) 90}
-  {FORCE_CHANCE_TO_HIT (side=2,3,4 canrecruit=yes) id=Clare 50}
+  {FORCE_CHANCE_TO_HIT id=Clare (side=2,3,4 canrecruit=yes) 90 ()}
+  {FORCE_CHANCE_TO_HIT (side=2,3,4 canrecruit=yes) id=Clare 40 ()}
   
   {GENERIC_DEATHS}
   {REDEEMING}
