--- a/For_Power/utils/chapter2.cfg
+++ b/For_Power/utils/chapter2.cfg
@@ -149,10 +149,10 @@
 #define STORY6
   [story]
     [part]
-      story = _ "So Clare left her village to find a kill the orc who assassinated Glacyn. She knew that she can't do with only herself so she went to Haldar."
+      story = _ "So Clare left her village to find and kill the orc who assassinated Glacyn. She knew that she cannot do with only herself so she went to Haldar."
     [/part]
     [part]
-      story = _ "But her journey wasn't as peaceful as she expexted."
+      story = _ "But her journey was not as peaceful as she expexted."
     [/part]
   [/story]
 #enddef
@@ -160,7 +160,7 @@
 #define STORY7
   [story]
     [part]
-      story = _ "Clare wasn't a good feeling about travelling with these bandits but she knew that there isn't an another way."
+      story = _ "Clare did not have a good feeling about travelling with these bandits but she knew that there was not an another way."
     [/part]
     [part]
       story = _ "Finally they came to Arkan Thoria."
@@ -182,7 +182,7 @@
 #define STORY9b
   [story]
     [part]
-      story = _ "Clare wasn't sure about her decision but she didn't see another way. But she was again a good student and one day she recieved a lesson about raising corpses."
+      story = _ "Clare was not sure about her decision but she did not see another way. But she was again a good student and one day she recieved a lesson about raising corpses."
     [/part]
   [/story]
 #enddef
@@ -206,7 +206,7 @@
 #define STORY12
   [story]
     [part]
-      story = _ "Finally Clare found the city where is the assassin hidding."
+      story = _ "Finally Clare found the city where the assassin was hidding."
     [/part]
   [/story]
 #enddef
@@ -260,7 +260,7 @@
       story = _ "Clare went back to her village. But her mind was full of questions. How will they welcome her? Will they accept her even? Will everything be the same?"
     [/part]
     [part]
-      story = _ "She couldn't expect any answer and finally arrived to the village."
+      story = _ "She could not expect any answer and finally arrived to the village."
     [/part]
   [/story]
 #enddef
@@ -268,7 +268,7 @@
 #define STORY18a
   [story]
     [part]
-      story = _ "For next five years there was relative peace here. Yes, the orcs sometimes attacked the village but they always were fended off."
+      story = _ "For next few years there was relative peace here. Yes, the orcs sometimes attacked the village but they always were fended off."
     [/part]
     [part]
       story = _ "But one day an orc united all tribes and started a total war against humans. All orcs went against humans together. They destroyed some villages. In the hour of greatest need Earl Menvan called Clare and Lemyr to arms."
@@ -282,7 +282,7 @@
 #define STORY18b
   [story]
     [part]
-      story = _ "It seemed that everything was ok but no fair tale lasts forever."
+      story = _ "It seemed that everything was ok but no fairy tale lasts forever."
     [/part]
   [/story]
 #enddef
@@ -290,7 +290,7 @@
 #define STORY19b
   [story]
     [part]
-      story = _ "Alas Clare couldn't just wait. She knew that Lemyr had no chance against Haldar."
+      story = _ "Alas Clare could not just wait. She knew that Lemyr had no chance against Haldar."
     [/part]
     [part]
       story = _ "She teleported to Haldar's place at the last minute."
