--- a/For_Power/utils2/story.cfg
+++ b/For_Power/utils2/story.cfg
@@ -15,7 +15,7 @@
       story = _ "So Clare rested in an elvish village for a few days. After that she continued in her advantures."
     [/part]
     [part]
-      story = _ "After a few days she came to lads of The Norhern Alliance."
+      story = _ "After a few days she came to lads of The Northern Alliance."
     [/part]
   [/story]
 #enddef
