--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -63,6 +63,23 @@
 	{FP_ABOUT}
 [/campaign]
 
+[campaign]
+  id=For_Power_III
+  name=_ "For Power Chapter III"
+  abbrev=_"FP3"
+  define=FOR_POWER_III
+  
+  difficulties=EASY,NORMAL,HARD
+  difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Tourist;*&units/human-magi/red-mage+female-attack-magic-1.png=Traveller;&units/human-magi/arch-mage+female-attack-magic-1.png=Adventurer"
+  
+  icon=data/add-ons/For_Power/images/bookshelf-full.png
+	image=data/add-ons/For_Power/images/magesilverfemale.png
+	description=_ "After a few years of peace the troubles returned to the Northlands. But it only started a chain of events what affected all known parts of the Great Continent. Join Clare and her friends and watch it with you own eyes."
+
+	first_scenario=01_End_of_peace
+	{FP_ABOUT}
+[/campaign]
+
 #ifdef FOR_POWER_I
 
 [binary_path]
@@ -71,10 +88,13 @@
 
 {~add-ons/For_Power/mainline-strings.cfg}
 {~add-ons/For_Power/utils}
+{~add-ons/For_Power/macros}
 {~add-ons/For_Power/scenarios}
 
 [+units]
-	{~add-ons/For_Power/units}
+	{~add-ons/For_Power/units/Clare_Lich.cfg}
+  {~add-ons/For_Power/units/Dark_Sorceress.cfg}
+  {~add-ons/For_Power/units/Necromancer.cfg}
 [/units]
 
 #endif
@@ -91,7 +111,46 @@
 {~add-ons/For_Power/scenarios2}
 
 [+units]
-	{~add-ons/For_Power/units}
+	{~add-ons/For_Power/units/Clare_Lich.cfg}
+  {~add-ons/For_Power/units/Walking_Corpse.cfg}
+  {~add-ons/For_Power/units/Soulless.cfg}
+[/units]
+
+#endif
+
+#ifdef FOR_POWER_III
+
+[binary_path]
+	path=data/add-ons/For_Power/
+[/binary_path]
+
+{~add-ons/For_Power/mainline-strings.cfg}
+{~add-ons/For_Power/utils3}
+{~add-ons/For_Power/macros}
+{~add-ons/For_Power/scenarios3}
+
+[+units]
+	{~add-ons/For_Power/units/Clare_Lich.cfg}
+  {~add-ons/For_Power/units/Lemyr_Lich.cfg}
+  {~add-ons/For_Power/units/Merissa_Lich.cfg}
+  {~add-ons/For_Power/units/Tinry_Shadow_Prince.cfg}
+  {~add-ons/For_Power/units/Amiwen_Elvish_Seer.cfg}
+[/units]
+
+#endif
+
+#ifdef MULTIPLAYER
+
+[binary_path]
+	path=data/add-ons/For_Power/
+[/binary_path]
+
+{~add-ons/For_Power/mainline-strings.cfg}
+{~add-ons/For_Power/macros}
+{~add-ons/For_Power/multiplayer}
+
+[+units]
+	{~add-ons/For_Power/units/Clare_Lich.cfg}
 [/units]
 
 #endif
