--- a/For_Power/macros/abilities.cfg
+++ b/For_Power/macros/abilities.cfg
@@ -5,12 +5,12 @@
     value={VALUE}
     id=healing {VALUE}
     affect_allies=yes
-    name= _ "heals $value"
+    name= _ "heals +{VALUE}"
     female_name= _ "female^heals {VALUE}"
     description= _ "Heals +{VALUE}:
 This unit combines herbal remedies with magic to heal units more quickly than is normally possible on the battlefield.
 
-A unit cared for by this healer may heal up to $value HP per turn, or stop poison from taking effect for that turn.
+A unit cared for by this healer may heal up to {VALUE} HP per turn, or stop poison from taking effect for that turn.
 A poisoned unit cannot be cured of its poison by a healer, and must seek the care of a village or a unit that can cure."
     affect_self=no
     poison=cured
@@ -18,4 +18,314 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
       adjacent=n,ne,se,s,sw,nw
     [/affect_adjacent]
   [/heals]
+#enddef
+
+#define ABILITY_REGENERATES_OTHER VALUE
+    [regenerate]
+        value={VALUE}
+        id=regenerates {VALUE}
+        name= _ "regenerates ({VALUE})"
+        female_name= _ "female^regenerates ({VALUE})"
+        description= _ "Regenerates:
+The unit will heal itself {VALUE} HP per turn. If it is poisoned, it will remove the poison instead of healing."
+        affect_self=yes
+        poison=cured
+    [/regenerate]
+#enddef
+
+#define ABILITY_DESPAIR INTENSITY
+  [leadership]
+    id=despair
+    value=-{INTENSITY}
+    cumulative=no
+    name= _ "despair ({INTENSITY})"
+    female_name= _ "female^despair ({INTENSITY})"
+    description= _ "Despair:
+This unit's presence is so darkly ominous that all adjacent enemies struggle with despair, dealing {INTENSITY}% less damage."
+    affect_self=no
+    affect_allies=no
+    affect_enemies=yes
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+    [/affect_adjacent]
+  [/leadership]
+#enddef
+
+#define ABILITY_SOUL_EATER
+  [dummy]
+    id=soul eater
+    name= _ "soul eater"
+    female_name= _ "female^soul eater"
+    description=_ "Soul eater:
+When this unit kills a certain amount of beings, it obtains special advancements."
+    [/dummy]
+#enddef
+
+#define ABILITY_CONVICTION INTENSITY
+  [resistance]
+    id=conviction
+    sub={INTENSITY}
+	  max_value=80
+    cumulative=yes
+    name= _ "conviction ({INTENSITY})"
+    female_name= _ "female^conviction ({INTENSITY})"
+    description= _ "Conviction:
+This unit's presence is so darkly ominous that all adjacent enemies struggle with the guilt of their evil deeds, reducing their resistances by {INTENSITY}%."
+    affect_self=no
+    affect_allies=no
+    affect_enemies=yes
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+    [/affect_adjacent]
+  [/resistance]
+#enddef
+
+#define ABILITY_SHIELD INTENSITY
+  [resistance]
+    id=shield
+    add={INTENSITY}
+    cumulative=yes
+    max_value=60
+    name= _ "shield ({INTENSITY})"
+    female_name= _ "female^shield ({INTENSITY})"
+    description= _ "Shield:
+This unit's presence is so glorious that all adjacent allies are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
+    affect_self=no
+    affect_allies=yes
+    affect_enemies=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+    [/affect_adjacent]
+  [/resistance]
+#enddef
+
+#define ABILITY_LEADERSHIP_LEVEL_6
+  [leadership]
+    id=leadership
+    value=150
+    cumulative=no
+    {LEADERSHIP_DESCRIPTION}
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        level=0
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=leadership
+    value=125
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        level=1
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=leadership
+    value=100
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        level=2
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=leadership
+    value=75
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        level=3
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=leadership
+    value=50
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        level=4
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=leadership
+    value=25
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        level=5
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+#enddef
+
+#define ABILITY_BANDIT_LEADERSHIP_1
+  [leadership]
+    id=bandit_leadership
+    value=100
+    cumulative=no
+    name= _ "leadership"
+    female_name= _ "female^leadership"
+    description= _ "Leadership:
+This unit can lead our own outlaw units that are next to it, making them fight better.
+
+Adjacent own outlaw units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Ruffian,Woodsman
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=75
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Thug,Footpad,Poacher
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=50
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Bandit,Outlaw,Trapper
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=25
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Highwayman,Fugitive,Huntsman,Ranger
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+#enddef
+
+#define ABILITY_BANDIT_LEADERSHIP_2
+  [leadership]
+    id=bandit_leadership
+    value=125
+    cumulative=no
+    name= _ "leadership"
+    female_name= _ "female^leadership"
+    description= _ "Leadership:
+This unit can lead our own outlaw units that are next to it, making them fight better.
+
+Adjacent own outlaw units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Ruffian,Woodsman
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=100
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Thug,Footpad,Poacher
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=75
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Bandit,Outlaw,Trapper
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=50
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Highwayman,Fugitive,Huntsman,Ranger
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+  [leadership]
+    id=bandit_leadership
+    value=25
+    cumulative=no
+    affect_self=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      [filter]
+        type=Tinry_Shadow Prince
+      [/filter]
+    [/affect_adjacent]
+  [/leadership]
+#enddef
+
+#define ABILITY_SCARE INTENSITY
+  [resistance]
+    id=bandit_shield
+    add=20
+    cumulative=yes
+    max_value=60
+    name= _ "scare {INTENSITY}"
+    female_name= _ "female^scare {INTENSITY}"
+    description= _ "Scare:
+This unit's presence is so horrible that all adjacent bandits are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
+    affect_self=no
+    affect_allies=yes
+    affect_enemies=no
+    [affect_adjacent]
+      adjacent=n,ne,se,s,sw,nw
+      type=Ruffian,Woodsman,Thug,Footpad,Poacher,Bandit,Outlaw,Trapper,Highwayman,Fugitive,Huntsman,Ranger,Tinry_Shadow Prince
+    [/affect_adjacent]
+  [/resistance]
+#enddef
+
+#define WEAPON_SPECIAL_SHOCKWAVE
+  [slow]
+    id=shockwave
+    name= _ "shockwave"
+    description= _ "Shockwave:
+This attack is so strong that it slows the target, and creates a shock wave that knocks all units adjacent to the attacker back, slows them too and damages them for 10 impact damage. Works only offensively."
+  [/slow]
 #enddef
