--- a/For_Power/mainline-strings.cfg
+++ b/For_Power/mainline-strings.cfg
@@ -23,12 +23,28 @@ _"lance"
 _"entangle"
 #enddef
 
+#define STR_LIGHTBEAM
+_"lightbeam"
+#enddef
+
 #define STR_DARK_SORCERESS
 _ "Dark Sorceress"
 #enddef
 
 #define STR_NECROMANCER
 _ "female^Necromancer"
+#enddef
+
+#define STR_FAERIE_TOUCH
+_ "faerie touch"
+#enddef
+
+#define STR_GOSSAMER
+_ "gossamer"
+#enddef
+
+#define STR_FAERIE_FIRE
+_ "faerie fire"
 #enddef
 
 #textdomain wesnoth-help
@@ -40,4 +56,13 @@ _ "female^Necromancer"
 This unit illuminates the surrounding area, making lawful units fight better, and chaotic units fight worse.
 
 Any units adjacent to this unit will fight as if it were dusk when it is night, and as if it were day when it is dusk."
+#enddef
+
+#define LEADERSHIP_DESCRIPTION
+  name= _ "leadership"
+    female_name= _ "female^leadership"
+    description= _ "Leadership:
+This unit can lead our own units that are next to it, making them fight better.
+
+Adjacent own units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
 #enddef
