--- a/For_Power/scenarios/02_Flight.cfg
+++ b/For_Power/scenarios/02_Flight.cfg
@@ -75,13 +75,17 @@
 		recruit=Orcish Grunt,Orcish Archer
 
 		{FLAG_VARIANT ragged}
-		{GOLD 80 95 110}
+		{GOLD 130 145 160}
 		{INCOME 2 4 7}
 		
 		{ORC_L2 33 6}
 		{ORC_L2 35 7}
 		{ORC_L2 33 7}
 		{ORC_L2 34 7}
+    {ORC_L2 29 6}
+		{ORC_L2 30 5}
+		{ORC_L2 37 5}
+		{ORC_L2 38 5}
 	[/side]
 	
 	[side]
@@ -98,7 +102,7 @@
 		recruit=Orcish Grunt,Orcish Archer,Goblin Spearman
 
 		{FLAG_VARIANT ragged}
-		{GOLD 80 95 110}
+		{GOLD 130 145 160}
 		{INCOME 2 4 7}
 		
 		{GENERIC_UNIT 4 (Goblin Rouser) 41 8}
