--- a/For_Power/scenarios/13_The_Assassin.cfg
+++ b/For_Power/scenarios/13_The_Assassin.cfg
@@ -135,7 +135,7 @@
 	  [/message]
 	  [message]
 	    speaker=narrator
-	    message=_"Clare didn't have much options to do so she did what he said."
+	    message=_"Clare did not have much options to do so she did what he said."
 	  [/message]
 	  [kill]
 	    id=Clare
@@ -208,7 +208,7 @@
 	    speaker=Clare
 	    message=_"Yes, but Merissa cannot see it."
 	    [show_if] # it was deprecated because I need her in the next scenario
-	      [variable] # without her it wouldn't have the right dialogue
+	      [variable] # without her it would not have the right dialogue
 	        name=merissa_alive
 	        equals=no
 	      [/variable]
@@ -217,7 +217,7 @@
 	  [message]
 	    speaker=Clare
 	    message=_"Yes, but some of your friends cannot see it."
-	    [show_if] # she is a kind and really good person even the hero even if she don't want to hear it
+	    [show_if] # she is a kind and really good person even the hero even if she do not want to hear it
 	      [variable] # check scenario 17a
 	        name=merissa_alive
 	        equals=yes
@@ -251,7 +251,7 @@
 	  [message]
 	    speaker=Merissa
 	    message=_"You are right."
-	  [/message] # she finally agree with him
+	  [/message] # she finally agrees with him
 	  [message]
 	    speaker=Mubryn
 	    message=_"You are right."
