--- a/For_Power/scenarios/15a_Back_Home.cfg
+++ b/For_Power/scenarios/15a_Back_Home.cfg
@@ -175,7 +175,7 @@
       [/unstore_unit]
     {NEXT TEMP_i}
     {CLEAR_VARIABLE villagers_store,TEMP_i}
-    # and allow to recruit regual troops and mages who she trained read a story of the next scenario
+    # and allow to recruit regual troops and mages who she trained. read a story of the next scenario
     [set_recruit]
 		  side=1
 		  recruit=Spearman,Bowman,Mage
