--- a/For_Power/scenarios2/03_More_Orcs.cfg
+++ b/For_Power/scenarios2/03_More_Orcs.cfg
@@ -236,6 +236,7 @@
       message=_"I and my friend will help you."
     [/message]
     {RECALL_HEROES}
+    {MAKE_HERO Merissa}
     [message]
       speaker=Tinry
       message=_"Yes. We will fight them."
@@ -326,6 +327,38 @@
     [/allow_recruit]
   [/event]
   
+	[event]
+	  name=die
+	  [filter]
+	    id=orc1
+	  [/filter]
+		[if]
+		  [have_unit]
+		    id=orc2
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=3 side 4}
+		    {TRANSFER_VILLAGE_OWNERSHIP 3 4}
+		  [/then]
+		[/if]
+	[/event]
+	
+	[event]
+	  name=die
+	  [filter]
+	    id=orc2
+	  [/filter]
+		[if]
+		  [have_unit]
+		    id=orc1
+		  [/have_unit]
+		  [then]
+		    {MODIFY_UNIT side=4 side 3}
+		    {TRANSFER_VILLAGE_OWNERSHIP 4 3}
+		  [/then]
+		[/if]
+	[/event]
+	
   [event]
     name=last breath
     [filter]
