--- a/For_Power/units/Clare_Lich.cfg
+++ b/For_Power/units/Clare_Lich.cfg
@@ -10,6 +10,13 @@
   {MAGENTA_IS_THE_TEAM_COLOR}
   hitpoints=70
   movement_type=smallfoot
+  [movement_costs]
+    deep_water=3
+  [/movement_costs]
+  [defense]
+	  deep_water=80
+	  unwalkable=40
+  [/defense]
   movement=6
   experience=60
   level=4
@@ -54,6 +61,49 @@
   [/attack]
   [attack_anim]
     [filter_attack]
+      name=staff
+    [/filter_attack]
+    [frame]
+      begin=-250
+      end=-200
+      image="units/human-magi/silver-mage+female.png"
+    [/frame]
+    [frame]
+      begin=-200
+      end=-100
+      image="units/human-magi/silver-mage+female-attack-staff1.png"
+    [/frame]
+    [if]
+      hits=yes
+      [frame]
+        begin=-100
+        end=100
+        image="units/human-magi/silver-mage+female-attack-staff2.png"
+        sound=staff.wav
+      [/frame]
+    [/if]
+    [else]
+      hits=no
+      [frame]
+        begin=-100
+        end=100
+        image="units/human-magi/silver-mage+female-attack-staff2.png"
+        sound={SOUND_LIST:MISS}
+      [/frame]
+    [/else]
+    [frame]
+      begin=100
+      end=175
+      image="units/human-magi/silver-mage+female-attack-magic1.png"
+    [/frame]
+    [frame]
+      begin=175
+      end=250
+      image="units/human-magi/silver-mage+female.png"
+    [/frame]
+  [/attack_anim]
+  [attack_anim]
+    [filter_attack]
       name=missile
     [/filter_attack]
     offset=0
@@ -77,33 +127,6 @@
     [/else]
     [frame]
       image="units/human-magi/silver-mage+female-attack-magic1.png"
-    [/frame]
-  [/attack_anim]
-  [attack_anim]
-    [filter_attack]
-      name=staff
-    [/filter_attack]
-    [frame]
-      image="units/human-magi/silver-mage+female.png"
-    [/frame]
-    [frame]
-      image="units/human-magi/silver-mage+female-attack-staff1.png"
-    [/frame]
-    [if]
-      [frame]
-        image="units/human-magi/silver-mage+female-attack-staff2.png"
-      [/frame]
-    [/if]
-    [else]
-      [frame]
-        image="units/human-magi/silver-mage+female-attack-staff2.png"
-      [/frame]
-    [/else]
-    [frame]
-      image="units/human-magi/silver-mage+female-attack-magic1.png"
-    [/frame]
-    [frame]
-      image="units/human-magi/silver-mage+female.png"
     [/frame]
   [/attack_anim]
   [attack_anim]
@@ -174,6 +197,141 @@
       end=150
       image="units/human-magi/silver-mage+female-attack-magic1.png"
       halo=halo/elven/nature-halo8.png
+      halo_x,halo_y=0,-28
+    [/frame]
+  [/attack_anim]
+  [attack_anim]
+		[filter_attack]
+			name=shadow wave
+		[/filter_attack]
+		[missile_frame]
+			begin=-100
+			end=100
+			image="projectiles/darkmissile-n.png"
+			image_diagonal="projectiles/darkmissile-ne.png"
+		[/missile_frame]
+		[frame]
+			begin=-300
+			end=-150
+			image="units/human-magi/silver-mage+female.png"
+		[/frame]
+		[frame]
+			begin=-150
+			end=-75
+			image="units/human-magi/silver-mage+female.png"
+			halo=halo/undead/black-magic-1.png
+		[/frame]
+		[if]
+			hits=yes
+			[frame]
+				begin=-75
+				end=0
+				image="units/human-magi/silver-mage+female-attack-magic1.png"
+				sound=magic-dark.ogg
+				halo=halo/undead/black-magic-2.png
+			[/frame]
+		[/if]
+		[else]
+			hits=no
+			[frame]
+				begin=-75
+				end=0
+				image="units/human-magi/silver-mage+female-attack-magic1.png"
+				sound=magic-dark-miss.ogg
+				halo=halo/undead/black-magic-2.png
+			[/frame]
+		[/else]
+		[frame]
+			begin=0
+			end=75
+			image="units/human-magi/silver-mage+female-attack-magic2.png"
+			halo=halo/undead/black-magic-3.png
+		[/frame]
+		[frame]
+			begin=75
+			end=150
+			image="units/human-magi/silver-mage+female-attack-magic1.png"
+			halo=halo/undead/black-magic-4.png
+		[/frame]
+		[frame]
+			begin=150
+			end=200
+			image="units/human-magi/silver-mage+female.png"
+			halo=halo/undead/black-magic-5.png
+		[/frame]
+		[frame]
+			begin=200
+			end=300
+			image="units/human-magi/silver-mage+female.png"
+		[/frame]
+	[/attack_anim]
+  [attack_anim]
+    [filter_attack]
+		  name=redeem
+    [/filter_attack]
+    {MISSILE_FRAME_FAERIE_FIRE_BACKWARDS}
+    [if]
+      hits=yes
+      [frame]
+        begin=-450
+        end=-375
+        image="units/human-magi/silver-mage+female-attack-magic1.png"
+        sound=magic-faeriefire.ogg
+        halo=halo/elven/faerie-fire-halo1.png
+        halo_x,halo_y=0,-28
+      [/frame]
+    [/if]
+    [else]
+      hits=no
+      [frame]
+        begin=-450
+        end=-375
+        image="units/human-magi/silver-mage+female-attack-magic1.png"
+        sound=magic-faeriefire-miss.ogg
+        halo=halo/elven/faerie-fire-halo1.png
+        halo_x,halo_y=0,-28
+      [/frame]
+    [/else]
+    [frame]
+      begin=-375
+      end=-300
+      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      halo=halo/elven/faerie-fire-halo2.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-300
+      end=-225
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      halo=halo/elven/faerie-fire-halo3.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-225
+      end=-150
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
+      halo=halo/elven/faerie-fire-halo4.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-150
+      end=-75
+      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      halo=halo/elven/faerie-fire-halo5.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-75
+      end=0
+      image="units/human-magi/silver-mage+female-attack-magic1.png"
+      halo=halo/elven/faerie-fire-halo6.png
+      halo_x,halo_y=0,-28
+    [/frame]
+    [frame]
+      begin=-0
+      end=75
+      image="units/human-magi/silver-mage+female.png"
+      halo=halo/elven/faerie-fire-halo7.png
       halo_x,halo_y=0,-28
     [/frame]
   [/attack_anim]
@@ -332,7 +490,7 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    max_times=1
+    max_times=2
     always_display=yes
     id=staff4
     description= _ "better with staff"
@@ -347,9 +505,9 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
+    id=staff4_attacks
     max_times=1
     always_display=yes
-    id=staff4_attacks
     description= _ "faster with staff"
     image=attacks/staff-ruby.png
     strict_amla=yes
@@ -358,6 +516,25 @@
 		  apply_to=attack
 		  name=staff
 		  increase_attacks=1
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=staff4_plague
+    max_times=1
+    always_display=yes
+    description= _ "creating better undead with staff"
+    image=attacks/staff-ruby.png
+    strict_amla=yes
+    require_amla="staff1,staff2,staff3,staff4,mysteryofdeath,staff2_plague"
+    [effect]
+		  apply_to=attack
+		  name=staff
+		  remove_specials=plague
+		  [set_specials]
+			  mode=append
+			  {WEAPON_SPECIAL_PLAGUE_TYPE "Soulless"}
+		  [/set_specials]
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
@@ -439,7 +616,7 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    max_times=1
+    max_times=5
     always_display=yes
     id=missile5
     description= _ "causing more havoc with missile"
@@ -456,53 +633,8 @@
   [advancement]
     max_times=1
     always_display=yes
-    id=missile5_speed
-    description= _ "faster with missile"
-    image=attacks/magic-missile.png
-    strict_amla=yes
-    require_amla="missile1,missile2,missile3,missile4,missile5"
-	  [effect]
-		  apply_to=attack
-		  name=missile
-		  increase_attacks=1
-	  [/effect]
-	  {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
-    id=missile6
-    description= _ "causing more havoc with missile"
-    image=attacks/magic-missile.png
-    strict_amla=yes
-    require_amla="missile1,missile2,missile3,missile4,missile5"
-	  [effect]
-		  apply_to=attack
-		  name=missile
-		  increase_damage=1
-	  [/effect]
-	  {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
-    id=missile6_speed
-    description= _ "faster with missile"
-    image=attacks/magic-missile.png
-    strict_amla=yes
-    require_amla="missile1,missile2,missile3,missile4,missile5,missile6,missile5_speed"
-	  [effect]
-		  apply_to=attack
-		  name=missile
-		  increase_attacks=1
-	  [/effect]
-	  {GREATER_AMLA_DEFAULT_BONUSES}
-  [/advancement]
-  [advancement]
-    max_times=1
-    always_display=yes
     id=entangle1
-    description= _ "entangle enemies"
+    description= _ "able to entangle enemies"
     image=attacks/entangle.png
     strict_amla=yes
     require_amla="entangle"
@@ -524,7 +656,7 @@
     max_times=1
     always_display=yes
     id=entangle2
-    description= _ "harm enemies more when entangling"
+    description= _ "harming enemies more when entangling"
     image=attacks/entangle.png
     strict_amla=yes
     require_amla="entangle1"
@@ -539,7 +671,7 @@
     max_times=1
     always_display=yes
     id=entangle3
-    description= _ "harm enemies more when entangling"
+    description= _ "harming enemies more when entangling"
     image=attacks/entangle.png
     strict_amla=yes
     require_amla="entangle1,entangle2"
@@ -572,7 +704,7 @@
     max_times=1
     always_display=yes
     id=entangle4
-    description= _ "harm enemies more when entangling"
+    description= _ "harming enemies more when entangling"
     image=attacks/entangle.png
     strict_amla=yes
     require_amla="entangle1,entangle2,entangle3"
@@ -646,7 +778,7 @@
     id=armour
     max_times=5
     always_display=yes
-    description= _ "better protected from magical attacks (3% better resistances)"
+    description= _ "better protected from magical attacks (2 or 3% better resistances)"
     image=icons/magical_shield.png
     strict_amla=yes
     require_amla=""
@@ -654,14 +786,403 @@
 	    apply_to=resistance
 	    replace=false
 	    [resistance]
-	 	    fire=-3
+	 	    fire=-2
 	 	    arcane=-3
-	 	    cold=-3
+	 	    cold=-2
 	    [/resistance]
 	  [/effect]
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
-  
+  [advancement]
+    id=possessed
+    max_times=1
+    always_display=yes
+    description=_"possessed by death (more hitpoints but worse arcane resistance)"
+    image=attacks/wail.png
+    strict_amla=yes
+    require_amla="mysteryofdeath"
+    [effect]
+      apply_to=hitpoints
+      increase_total=5
+    [/effect]
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        arcane=4
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=drain
+    max_times=1
+    always_display=yes
+    description=_"able to drain life force from living enemies (but worse arcane resistance)"
+    image=attacks/dark-missile.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed"
+    [effect]
+      apply_to=attack
+      attack=staff
+      range=melee
+      [set_specials]
+        mode=append
+        {WEAPON_SPECIAL_DRAIN}
+      [/set_specials]
+    [/effect]
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        arcane=4
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=cold
+    max_times=1
+    always_display=yes
+    description=_"cold-hearted (better cold resistance)"
+    image=items/ball-blue.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed"
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        cold=-5
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=cold1
+    max_times=1
+    always_display=yes
+    description=_"more cold-hearted (better cold resistance)"
+    image=items/ball-blue.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed,cold"
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        cold=-5
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=fire
+    max_times=1
+    always_display=yes
+    description=_"better protected from fire"
+    image=attacks/fire-blast.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed"
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        fire=-5
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=regeneration
+    max_times=1
+    always_display=yes
+    description= _ "regenerating 4 additional hitpoints per turn"
+    image=icons/potion_green_medium.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed"
+	  [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_REGENERATES}
+		  [/abilities]
+	  [/effect]
+	  [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 12}
+		  [/abilities]
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=regeneration1
+    max_times=1
+    always_display=yes
+    description= _ "regenerating 2 additional hitpoints per turn"
+    image=icons/potion_green_medium.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed,regeneration"
+	  [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 12}
+		  [/abilities]
+	  [/effect]
+	  [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 14}
+		  [/abilities]
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=darkness
+    max_times=1
+    always_display=yes
+    description= _ "connected with darkness (spread despair but worse arcane resistance)"
+    image=attacks/blank-attack.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed,cold"
+    [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_DESPAIR 15}
+		  [/abilities]
+	  [/effect]
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        arcane=3
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=darkness1
+    max_times=1
+    always_display=yes
+    description= _ "more connected with darkness (spread even greater despair and invisible during the night but worse arcane resistance)"
+    image=attacks/blank-attack.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed,cold,cold1,darkness"
+    [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_DESPAIR 15}
+		  [/abilities]
+	  [/effect]
+	  [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_DESPAIR 25}
+		  [/abilities]
+	  [/effect]
+    [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_NIGHTSTALK}
+		  [/abilities]
+	  [/effect]
+    [effect]
+      apply_to=resistance
+      replace=no
+      [resistance]
+        arcane=4
+      [/resistance]
+    [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=shadowwave1
+    max_times=1
+    always_display=yes
+    description= _ "able to cast shadow wave"
+    image=attacks/dark-missile.png
+    strict_amla=yes
+    require_amla="mysteryofdeath,possessed"
+	  [effect]
+		  apply_to=new_attack
+		  damage=8
+		  number=3
+		  type=arcane
+		  name=shadow wave
+		  description= _"shadow wave"
+		  icon=attacks/dark-missile.png
+		  range=ranged
+		  [specials]
+			  {WEAPON_SPECIAL_MAGICAL}
+			[/specials]
+	  [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=shadowwave2
+    max_times=1
+    always_display=yes
+    description= _ "casting shadow wave faster"
+    image=attacks/dark-missile.png
+    strict_amla=yes
+    require_amla="shadowwave1"
+	  [effect]
+		  apply_to=attack
+		  name=shadow wave
+		  increase_attacks=1
+	  [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=shadowwave3
+    max_times=5
+    always_display=yes
+    description= _ "casting shadow wave better"
+    image=attacks/dark-missile.png
+    strict_amla=yes
+    require_amla="shadowwave1,shadowwave2"
+	  [effect]
+		  apply_to=attack
+		  name=shadow wave
+		  increase_damage=1
+	  [/effect]
+    {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=regeneration2
+    max_times=1
+    always_display=yes
+    description= _ "regenerating 3 additional hitpoints per turn"
+    image=icons/potion_green_medium.png
+    strict_amla=yes
+    require_amla="regeneration,regeneration1,redeem_mastery"
+    [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 14}
+		  [/abilities]
+	  [/effect]
+	  [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 17}
+		  [/abilities]
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=regeneration3
+    max_times=1
+    always_display=yes
+    description= _ "regenerating 3 additional hitpoints per turn"
+    image=icons/potion_green_medium.png
+    strict_amla=yes
+    require_amla="regeneration,regeneration1,regeneration2,redeem_mastery"
+    [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 17}
+		  [/abilities]
+	  [/effect]
+	  [effect]
+		  apply_to=new_ability
+		  [abilities]
+			  {ABILITY_REGENERATES_OTHER 20}
+		  [/abilities]
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+    id=movement3
+    max_times=1
+    always_display=yes
+    description= _ "able to muster enough mental powers to levitate through hard terrains"
+    image=icons/boots_elven.png
+    strict_amla=yes
+    require_amla="movement,movement,redeem_mastery"
+	  [effect]
+		  apply_to=movement_costs
+		  replace=true
+	    [movement_costs]
+		    frozen=1
+		    shallow_water=1
+		    deep_water=1
+		    reef=1
+		    flat=1
+		    castle=1
+		    village=1
+		    forest=1
+		    cave=1
+		    hills=1
+		    mountains=2
+		    forest=1
+		    fungus=2
+		    swamp_water=1
+		    sand=1
+		    unwalkable=1
+		    impassable={UNREACHABLE}
+	    [/movement_costs]
+	  [/effect]
+	  {GREATER_AMLA_DEFAULT_BONUSES}
+  [/advancement]
+  [advancement]
+		id=conviction
+		max_times=1
+    always_display=yes
+		strict_amla=yes
+		description= _ "-15% to resistances of all adjacent enemies"
+		image=attacks/curse.png
+		require_amla="redeem_mastery"
+		[effect]
+			apply_to=new_ability
+			[abilities]
+				{ABILITY_CONVICTION 15}
+			[/abilities]
+		[/effect]
+		{GREATER_AMLA_DEFAULT_BONUSES}
+	[/advancement]
+  [advancement]
+		id=conviction1
+		max_times=1
+    always_display=yes
+		strict_amla=yes
+		description= _ "-20% to resistances of all adjacent enemies"
+		image=attacks/curse.png
+		require_amla="redeem_mastery,conviction"
+    [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_CONVICTION 15}
+		  [/abilities]
+	  [/effect]
+		[effect]
+			apply_to=new_ability
+			[abilities]
+				{ABILITY_CONVICTION 20}
+			[/abilities]
+		[/effect]
+		{GREATER_AMLA_DEFAULT_BONUSES}
+	[/advancement]
+  [advancement]
+		id=conviction2
+		max_times=1
+    always_display=yes
+		strict_amla=yes
+		description= _ "-25% to resistances of all adjacent enemies"
+		image=attacks/curse.png
+		require_amla="redeem_mastery,conviction,conviction1"
+    [effect]
+		  apply_to=remove_ability
+		  [abilities]
+			  {ABILITY_CONVICTION 20}
+		  [/abilities]
+	  [/effect]
+		[effect]
+			apply_to=new_ability
+			[abilities]
+				{ABILITY_CONVICTION 25}
+			[/abilities]
+		[/effect]
+		{GREATER_AMLA_DEFAULT_BONUSES}
+	[/advancement]
   [variation]
     id=Clare_Lich
     variation_name="Clare_Lich_Redeem"
