--- a/For_Power/utils/chapter1.cfg
+++ b/For_Power/utils/chapter1.cfg
@@ -65,7 +65,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"No! You can't die!"
+      message=_"No! You cannot die!"
     [/message]
     {DEFEAT}
   [/event]
@@ -83,7 +83,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"No! You can't die!"
+      message=_"No! You cannot die!"
     [/message]
     {DEFEAT}
   [/event]
@@ -184,7 +184,7 @@
 		  story= _ "Once her studies were complete, Clare returned to her home village to help out however she could, and improve her magic is possible. The village was peaceful and prosperous."
 		[/part]
 		[part]
-		  story= _ "But it did not last. One day, the peace came to and end, as orcs were spotted on the distant horizon."
+		  story= _ "But it did not last. One day, the peace came to an end, as orcs were spotted on the distant horizon."
 		[/part]
 	[/story]
 #enddef
