wescamp.py: Update from add-on server

--- a/For_Power/scenarios3/05_Dealing_with_trolls.cfg
+++ b/For_Power/scenarios3/05_Dealing_with_trolls.cfg
@@ -70,6 +70,9 @@
 	  id=troll
     generate_name=yes
 	  canrecruit=yes
+    [variables]
+      unredeemable=yes
+    [/variables]
     
     recruit=Troll Whelp
 	  
@@ -94,9 +97,6 @@
 		    condition=lose
 	    [/objective]
 	    {TURNS_RUN_OUT}
-      [note]
-        description= _ "You cannot use redeem attack in this scenario."
-      [/note]
 			[gold_carryover]
 				bonus=yes
 				carryover_percentage=40
@@ -336,7 +336,7 @@
   
   {GENERIC_DEATHS}
   {RAVANALS_DEATH}
-  #{REDEEMING}
+  {REDEEMING}
   {SOUL_EATER}
   {ABILITIES_EVENTS}
 [/scenario]
