--- a/For_Power/macros/redeem.cfg
+++ b/For_Power/macros/redeem.cfg
@@ -79,7 +79,16 @@
     [filter_attack]
       special=redeem {NAME}
     [/filter_attack]
-
+    [filter_second]
+      [not]
+        [filter_wml]
+          [variables]
+            unredeemable=yes
+          [/variables]
+        [/filter_wml]
+      [/not]
+    [/filter_second]
+    
     {VARIABLE_OP luck rand (1..100)}
     {VARIABLE redeemed 0}
     [if]
