--- a/For_Power/scenarios2/07_West_Front.cfg
+++ b/For_Power/scenarios2/07_West_Front.cfg
@@ -68,11 +68,14 @@
     id=lich
     name=_"Mal-Zarul"
     canrecruit=yes
+    [variables]
+      unredeemable=yes
+    [/variables]
     
     recruit=Revenant,Bone Shooter,Skeleton,Skeleton Archer
     
 		{FLAG_VARIANT undead}
-		{GOLD 150 175 190}
+		{GOLD 210 235 250}
 		{INCOME 1 1 3}
   [/side]
   
@@ -90,8 +93,8 @@
     recruit=Skeleton,Skeleton Archer
     
 		{FLAG_VARIANT undead}
-		{GOLD 100 120 135}
-		{INCOME 0 1 2}
+		{GOLD 125 145 160}
+		{INCOME 0 0 1}
   [/side]
   
   [side]
@@ -108,8 +111,8 @@
     recruit=Skeleton,Skeleton Archer
     
 		{FLAG_VARIANT undead}
-		{GOLD 100 120 135}
-		{INCOME 0 1 2}
+		{GOLD 125 145 160}
+		{INCOME 0 0 1}
   [/side]
   
   [event]
@@ -168,7 +171,7 @@
     [/message]
     [message]
       speaker=Ralenyth
-      message=_"Menvan? Yes, we used to be friends but i heard he has been murdered."
+      message=_"Menvan? Yes, we used to be friends but I heard he has been murdered."
     [/message]
     [message]
       speaker=Clare
@@ -177,6 +180,11 @@
     [message]
       speaker=Ralenyth
       message=_"Anyhow thank you for arriving. With you our chances to defeat these undeads are much better."
+    [/message]
+    [message]
+      speaker=narrator
+		  image=wesnoth-icon.png
+      message=_"You got some level 2 units to recall. They were earl Menvan's soldiers and now they serve Clare."
     [/message]
     {CAPTURE_VILLAGE 1 42 9}
     {CAPTURE_VILLAGE 1 42 12}
@@ -276,10 +284,6 @@
       id=storing_killed_soldiers
       remove=yes
     [/event]
-    [kill]
-      id=ksjksj
-      animate=no
-    [/kill]
   [/event]
   
   [event]
