wescamp.py: Update from add-on server

--- a/For_Power/utils4/deaths.cfg
+++ b/For_Power/utils4/deaths.cfg
@@ -1,20 +1,38 @@
 #textdomain wesnoth-For_Power
 
-#define CLARES_DEATH
+#define GENERIC_DEATHS
   [event]
     name=last breath
     [filter]
       id=Clare
     [/filter]
     [message]
-      speaker=unit
-      message=_"It cannot end now and here."
+      speaker=Clare
+      message=_"So it was my last adventure."
+    [/message]
+    [message]
+      speaker=Jolla
+      message=_"Mom! No!"
     [/message]
     {DEFEAT}
   [/event]
-#enddef
-
-#define MERISSA_DEATH
+  
+  [event]
+    name=last breath
+    [filter]
+      id=Lemyr
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Farewell, Clare."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"No! It was hard to lose you for first time but now it is permanent. I cannot exist without you!"
+    [/message]
+    {DEFEAT}
+  [/event]
+  
   [event]
     name=last breath
     [filter]
@@ -30,27 +48,7 @@
     [/message]
     {DEFEAT}
   [/event]
-#enddef
-
-#define LEMYR_DEATH
-  [event]
-    name=last breath
-    [filter]
-      id=Lemyr
-    [/filter]
-    [message]
-      speaker=unit
-      message=_"Farewell, Clare."
-    [/message]
-    [message]
-      speaker=Clare
-      message=_"Noo!"
-    [/message]
-    {DEFEAT}
-  [/event]
-#enddef
-
-#define AMIWEN_DEATH
+  
   [event]
     name=last breath
     [filter]
@@ -66,50 +64,35 @@
     [/message]
     {DEFEAT}
   [/event]
-#enddef
-
-#define TINRY_DEATH
+  
   [event]
     name=last breath
     [filter]
-      id=Tinry
+      id=Jolla
     [/filter]
     [message]
       speaker=unit
-      message=_"No. My days is at the end."
+      message=_"I am not feeling very well. What is wrong with me, mom?"
     [/message]
-    {DEFEAT}
-  [/event]
-#enddef
-
-#define RAVANALS_DEATH
-  [event]
-    name=last breath
-    [filter]
-      id=Ravanal
-    [/filter]
+    [message]
+      speaker=Clare
+      message=_"Nothing. You are just tired. Close your eyes and rest for a while."
+    [/message]
     [message]
       speaker=unit
-      message=_"No. This is impossible!"
+      message=_"As you say, mom."
     [/message]
   [/event]
+  
   [event]
     name=die
     [filter]
-      id=Ravanal
+      id=Jolla
     [/filter]
     [message]
       speaker=Clare
-      message=_"Well I did not like him too much but we needed him on this mission."
+      message=_"No! I cannot continue without her!"
     [/message]
     {DEFEAT}
   [/event]
-#enddef
-
-#define GENERIC_DEATHS
-  {CLARES_DEATH}
-  {LEMYR_DEATH}
-  {AMIWEN_DEATH}
-  {MERISSA_DEATH}
-  {TINRY_DEATH}
 #enddef
