--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -95,6 +95,23 @@
 	{FP_ABOUT}
 [/campaign]
 
+[campaign]
+  id=For_Power_IV
+  name=_ "For Power Chapter IV"
+  abbrev=_"FP4"
+  define=FOR_POWER_IV
+  
+  difficulties=EASY,NORMAL,HARD
+  difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Tourist;*&units/human-magi/red-mage+female-attack-magic-1.png=Traveller;&units/human-magi/arch-mage+female-attack-magic-1.png=Adventurer"
+  
+  icon=data/add-ons/For_Power/images/bookshelf-full.png
+	image=data/add-ons/For_Power/images/portraits/Clare.png
+	description=_ "Peace cannot rule the Northlands forever. After about two decades of peace some strange things started to happend there. Discover what (and who) is behind it."
+
+	first_scenario=01_Searching_adventures
+	{FP_ABOUT}
+[/campaign]
+
 #ifdef FOR_POWER_I
 
 [binary_path]
@@ -150,6 +167,28 @@
   {~add-ons/For_Power/units/Merissa_Lich.cfg}
   {~add-ons/For_Power/units/Tinry_Shadow_Prince.cfg}
   {~add-ons/For_Power/units/Amiwen_Elvish_Seer.cfg}
+[/units]
+
+#endif
+
+#ifdef FOR_POWER_IV
+
+[binary_path]
+	path=data/add-ons/For_Power/
+[/binary_path]
+
+{~add-ons/For_Power/mainline-strings.cfg}
+{~add-ons/For_Power/utils4}
+{~add-ons/For_Power/macros}
+{~add-ons/For_Power/scenarios4}
+
+[+units]
+	{~add-ons/For_Power/units/Clare_Lich.cfg}
+  {~add-ons/For_Power/units/Lemyr_Lich.cfg}
+  {~add-ons/For_Power/units/Merissa_Lich.cfg}
+  {~add-ons/For_Power/units/Tinry_Shadow_Prince.cfg}
+  {~add-ons/For_Power/units/Amiwen_Elvish_Seer.cfg}
+  {~add-ons/For_Power/units/Blessed_Mage.cfg}
 [/units]
 
 #endif
