--- a/For_Power/macros/misc.cfg
+++ b/For_Power/macros/misc.cfg
@@ -13,6 +13,40 @@
   [/capture_village]
 #enddef
 
+#define TRAIT_BLESSED
+  [trait]
+    id=blessed
+    male_name = _ "blessed"
+    female_name = _ "female^blessed"
+    description = _ "This unit is probably blessed by a god/goddess because it it is better than others of its kind."
+    [effect]
+      apply_to=hitpoints
+      increase_total=1
+    [/effect]
+    [effect]
+      apply_to=hitpoints
+      increase_total=3
+      times=per level
+    [/effect]
+    [effect]
+      apply_to=resistance
+      replace=false
+      [resistance]
+        blade=-5
+        pierce=-5
+        impact=-5
+        arcane=-20
+        fire=-10
+        cold=-10
+      [/resistance]
+    [/effect]
+    [effect]
+      apply_to=max_experience
+      increase=-15%
+    [/effect]
+  [/trait]
+#enddef
+
 #define GREATER_AMLA_DEFAULT_BONUSES
   [effect]
     apply_to=hitpoints
