wescamp.py: Update from add-on server

--- a/For_Power/multiplayer/Seeking_evil.cfg
+++ b/For_Power/multiplayer/Seeking_evil.cfg
@@ -47,6 +47,7 @@ This is a relatively short scenario."
     y=26-31,26,25,24,23
     {UNDERGROUND}
   [/time_area]
+  allow_modification=plan_your_advancements
   
   [side]
     side=1
@@ -63,10 +64,10 @@ This is a relatively short scenario."
 		canrecruit=yes
 		unrenamable=true
 
-		recruit=Mage,Thug,Footpad,Thief
+		recruit=Mage,Thug,Footpad,Thief,Poacher
 		
 		{FLAG_VARIANT loyalist}
-		gold=170
+		gold=95
 		income=-2
 		gold_lock=true
     income_lock=true
@@ -94,17 +95,17 @@ This is a relatively short scenario."
     user_team_name= _ "Heroes"
     save_id="Lemyr"
 
-		type=Paladin
+		type=Lemyr_Paladin # a bit more hitpoints and advancements
 		id=Lemyr
 		name=_"Lemyr"
     gender=male
 		canrecruit=yes
 		unrenamable=true
 
-		recruit=Horseman,Bowman,Spearman,Fencer
+		recruit=Horseman,Bowman,Spearman,Fencer,Heavy Infantryman
 		
 		{FLAG_VARIANT loyalist}
-		gold=170
+		gold=95
 		income=-2
 		gold_lock=true
     income_lock=true
@@ -168,10 +169,9 @@ This is a relatively short scenario."
 		name=_"Gadé Ihn"
 		canrecruit=yes
 
-		recruit=Drake Fighter,Drake Burner,Drake Clasher
-		
+		recruit=Drake Burner
 		{FLAG_VARIANT ragged}
-		gold=120
+		gold=100
 		income=0
 		allow_player=false
 		hidden=yes
@@ -181,6 +181,11 @@ This is a relatively short scenario."
 		  x,y=7,26
 		[/village]
 		
+    {GENERIC_UNIT 2 (Drake Fighter) 7 23} {GUARDIAN}
+    {GENERIC_UNIT 2 (Drake Fighter) 8 23} {GUARDIAN}
+    {GENERIC_UNIT 2 (Drake Clasher) 10 23} {GUARDIAN}
+    {GENERIC_UNIT 2 (Drake Clasher) 12 22} {GUARDIAN}
+    
 		[ai]
 		  [avoid]
 		    x,y=7,26
@@ -190,7 +195,7 @@ This is a relatively short scenario."
 		    y=16-20
 		  [/avoid]
       passive_leader=yes
-      recruitment_pattern=archer,archer,fighter
+      recruitment_pattern=archer
 		[/ai]
   [/side]
   
@@ -520,6 +525,14 @@ This is a relatively short scenario."
     {FOREACH gate1 i}
       {MODIFY_TERRAIN Gg ($gate1[$i].x) ($gate1[$i].y)}
     {NEXT i}
+    {MODIFY_TERRAIN Khr 6 20}
+    {MODIFY_TERRAIN Khr 12 19}
+    {MODIFY_TERRAIN Chr 5 21}
+    {MODIFY_TERRAIN Chr 6 21}
+    {MODIFY_TERRAIN Chr 7 21}
+    {MODIFY_TERRAIN Chr 11 20}
+    {MODIFY_TERRAIN Chr 12 20}
+    {MODIFY_TERRAIN Chr 13 20}
   [/event]
   
   [event]
@@ -800,6 +813,14 @@ This is a relatively short scenario."
     {FOREACH gate2 i}
       {MODIFY_TERRAIN Gg ($gate2[$i].x) ($gate2[$i].y)}
     {NEXT i}
+    {MODIFY_TERRAIN Khr 26 20}
+    {MODIFY_TERRAIN Khr 32 20}
+    {MODIFY_TERRAIN Chr 25 20}
+    {MODIFY_TERRAIN Chr 26 19}
+    {MODIFY_TERRAIN Chr 27 20}
+    {MODIFY_TERRAIN Chr 31 20}
+    {MODIFY_TERRAIN Chr 32 19}
+    {MODIFY_TERRAIN Chr 33 20}
   [/event]
   
   [event]
