--- a/For_Power/macros/abilities.cfg
+++ b/For_Power/macros/abilities.cfg
@@ -7,8 +7,7 @@
     affect_allies=yes
     name= _ "heals +{VALUE}"
     female_name= _ "female^heals {VALUE}"
-    description= _ "Heals +{VALUE}:
-This unit combines herbal remedies with magic to heal units more quickly than is normally possible on the battlefield.
+    description= _ "This unit combines herbal remedies with magic to heal units more quickly than is normally possible on the battlefield.
 
 A unit cared for by this healer may heal up to {VALUE} HP per turn, or stop poison from taking effect for that turn.
 A poisoned unit cannot be cured of its poison by a healer, and must seek the care of a village or a unit that can cure."
@@ -26,8 +25,7 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
         id=regenerates {VALUE}
         name= _ "regenerates ({VALUE})"
         female_name= _ "female^regenerates ({VALUE})"
-        description= _ "Regenerates:
-The unit will heal itself {VALUE} HP per turn. If it is poisoned, it will remove the poison instead of healing."
+        description= _ "The unit will heal itself {VALUE} HP per turn. If it is poisoned, it will remove the poison instead of healing."
         affect_self=yes
         poison=cured
     [/regenerate]
@@ -40,8 +38,7 @@ The unit will heal itself {VALUE} HP per turn. If it is poisoned, it will remove
     cumulative=no
     name= _ "despair ({INTENSITY})"
     female_name= _ "female^despair ({INTENSITY})"
-    description= _ "Despair:
-This unit's presence is so darkly ominous that all adjacent enemies struggle with despair, dealing {INTENSITY}% less damage."
+    description= _ "This unit's presence is so darkly ominous that all adjacent enemies struggle with despair, dealing {INTENSITY}% less damage."
     affect_self=no
     affect_allies=no
     affect_enemies=yes
@@ -69,8 +66,7 @@ When this unit kills a certain amount of beings, it obtains special advancements
     cumulative=yes
     name= _ "conviction ({INTENSITY})"
     female_name= _ "female^conviction ({INTENSITY})"
-    description= _ "Conviction:
-This unit's presence is so darkly ominous that all adjacent enemies struggle with the guilt of their evil deeds, reducing their resistances by {INTENSITY}%."
+    description= _ "This unit's presence is so darkly ominous that all adjacent enemies struggle with the guilt of their evil deeds, reducing their resistances by {INTENSITY}%."
     affect_self=no
     affect_allies=no
     affect_enemies=yes
@@ -88,8 +84,7 @@ This unit's presence is so darkly ominous that all adjacent enemies struggle wit
     max_value=60
     name= _ "shield ({INTENSITY})"
     female_name= _ "female^shield ({INTENSITY})"
-    description= _ "Shield:
-This unit's presence is so glorious that all adjacent allies are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
+    description= _ "This unit's presence is so glorious that all adjacent allies are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
     affect_self=no
     affect_allies=yes
     affect_enemies=no
@@ -182,8 +177,7 @@ This unit's presence is so glorious that all adjacent allies are hounoured and i
     cumulative=no
     name= _ "leadership"
     female_name= _ "female^leadership"
-    description= _ "Leadership:
-This unit can lead our own outlaw units that are next to it, making them fight better.
+    description= _ "This unit can lead our own outlaw units that are next to it, making them fight better.
 
 Adjacent own outlaw units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
     affect_self=no
@@ -239,8 +233,7 @@ Adjacent own outlaw units of lower level will do more damage in battle. When a u
     cumulative=no
     name= _ "leadership"
     female_name= _ "female^leadership"
-    description= _ "Leadership:
-This unit can lead our own outlaw units that are next to it, making them fight better.
+    description= _ "This unit can lead our own outlaw units that are next to it, making them fight better.
 
 Adjacent own outlaw units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
     affect_self=no
@@ -308,9 +301,8 @@ Adjacent own outlaw units of lower level will do more damage in battle. When a u
     cumulative=yes
     max_value=60
     name= _ "scare {INTENSITY}"
-    female_name= _ "female^scare {INTENSITY}"
-    description= _ "Scare:
-This unit's presence is so horrible that all adjacent bandits are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
+    female_name= _ "female^scare ({INTENSITY})"
+    description= _ "This unit's presence is so horrible that all adjacent bandits are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
     affect_self=no
     affect_allies=yes
     affect_enemies=no
