--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -96,8 +96,6 @@
 	{EXTRA_SCENARIO_MUSIC heroes_rite.ogg}
 	{STORY4}
 	{DEFAULT_SCHEDULE}
-	
-	#{AI_CONTROLLER em 1 5 ()}
 
 	[side]
 		side=1
@@ -191,25 +189,6 @@
 		{FLAG_VARIANT loyalist}
 		{GOLD 130 120 110}
 		{INCOME 5 3 1}
-		#[ai]
-		  #recruitment_pattern=fighter,fighter,archer,archer,scout
-		  #village_value=0
-		  #villages_per_scout=0
-		  #[goal]
-		    #name=protect_my_unit
-		    #[criteria]
-		      #id=Rheran
-		    #[/criteria]
-		    #value=5
-		  #[/goal]
-		  #[goal]
-		    #name=target_location
-		    #[criteria]
-		      #x,y=36,8
-		    #[/criteria]
-		    #value=5
-		  #[/goal]
-		#[/ai]
 	[/side]
 	
 	{OWNER_OF_VILLAGE 11 25 1}
@@ -257,7 +236,6 @@
 				bonus=yes
 				carryover_percentage=40
 			[/gold_carryover]
-			#{AI_CONTROLLER_NOTE}
 		[/objectives]
   [/event]
   
@@ -323,18 +301,7 @@
 			message=_"Yes, we shall avenge our dead, may they rest in peace."
 		[/message]
 	[/event]
-  
-  [event]
-    name=last breath
-    [filter]
-      id=orc1
-    [/filter]
-    [message]
-      speaker=unit
-      message=_"Someone will avenge me. Be sure about it!"
-    [/message]
-  [/event]
-  
+
 	[event]
 	  name=die
 	  [filter]
@@ -355,6 +322,17 @@
 		[/if]
 	[/event]
 	
+  [event]
+    name=last breath
+    [filter]
+      id=orc1
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Someone will avenge me. Be sure about it!"
+    [/message]
+  [/event]
+  
 	[event]
 	  name=die
 	  [filter]
@@ -396,7 +374,7 @@
 		[/kill]
 		[message]
 			speaker=Clare
-			message=_"I am glad you return Lemyr."
+			message=_"I am glad you returned Lemyr."
 		[/message]
 		[message]
 			speaker=Lemyr
