--- a/For_Power/scenarios/05_A_Mage.cfg
+++ b/For_Power/scenarios/05_A_Mage.cfg
@@ -159,7 +159,7 @@
 		{TELEPORT_UNIT id=Lemyr 9 31}
 		[message]
 		  speaker=Clare
-		  message=_"Where is it if I can ask?"
+		  message=_"Where is it if I may ask?"
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -280,7 +280,7 @@
 		[/message]
 		[message]
 		  speaker=Lemyr
-		  message=_"I am sorry. You must find him alone. Somebody must stay here and protect the village."
+		  message=_"I am sorry. You must find him at your own. Somebody must stay here and protect the village."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -305,7 +305,7 @@
 		  variable=villagers_store
 		  kill=yes
 		[/store_unit]
-		# store their gold for later
+		# store both side 1 and 2' gold for later
 		[store_gold]
 		  side=1
 		  variable=clare_gold
