--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -146,11 +146,11 @@
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"I heard about one mage who lives there. I think that he isn't a really good guy."
+		  message=_"I heard about one mage who lives there. I think he isn't a really good guy."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Is it you who is saying a such think?"
+		  message=_"Is it you who is saying such a think?"
 		[/message]
 		[message]
 		  speaker=Tinry
@@ -167,7 +167,7 @@
 		[message]
 		  speaker=narrator
 		  image=wesnoth-icon.png
-		  message=_"You recieved some gold so you can recruit some footpads and thieves to protect you and expolore the land. You can also recall bandits from previous scenario."
+		  message=_"You recieved some gold so you can recruit some footpads and thieves to protect you and expolore the land. You can also recall the ones from previous scenario."
 		[/message]
     [gold]
       side=1
@@ -241,7 +241,7 @@
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"Nice to meet you Clare. I can accompany you if you want. I know this region very well."
+		  message=_"Nice to meet you, Clare. I can accompany you if you want. I know this region very well."
 		[/message]
 		[message]
 		  speaker=Clare
