--- a/For_Power/scenarios/09a_Bandits.cfg
+++ b/For_Power/scenarios/09a_Bandits.cfg
@@ -73,7 +73,7 @@
 	  [/message]
 	  [message]
 	    speaker=Mubryn
-	    message=_"Some orc, you say? Can't you handle a orc, Tinry?"
+	    message=_"Some orc, you say? Can't you handle one orc, Tinry?"
 	  [/message]
 	  [message]
 	    speaker=Clare
@@ -89,7 +89,7 @@
 	  [/message]
 	  [message]
 	    speaker=Mubryn
-	    message=_"Do I have some guarantees?"
+	    message=_"Do I have any guarantees?"
 	  [/message]
 	  [message]
 	    speaker=Clare
@@ -97,7 +97,7 @@
 	  [/message]
 	  [message]
 	    speaker=Mubryn
-	    message=_"Ok I can do this. Alas this will be expensive."
+	    message=_"Ok, I can do this. Alas this will be expensive."
 	  [/message]
 	  [message]
 	    speaker=Clare
