--- a/For_Power/scenarios/10b_Skeletons.cfg
+++ b/For_Power/scenarios/10b_Skeletons.cfg
@@ -108,6 +108,8 @@
 		[/objectives]
 	[/event]
 	
+	{STARTING_VILLAGES_ALL 1}
+  
 	[event]
 	  name=start
 	  {PLACE_IMAGE items/bones.png 5 14}
@@ -116,7 +118,6 @@
 	  {PLACE_IMAGE items/bones.png 14 12}
 	  {PLACE_IMAGE items/bones.png 3 12}
 	  {PLACE_IMAGE items/bones.png 11 10}
-	  {STARTING_VILLAGES_ALL 1}
 	  [message]
 		  speaker=Haldar
 		  message=_"So we are here. We can find some better corpses here. Are you ready for your next lesson, Clare?"
@@ -230,7 +231,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Revenants, death knights or even ghosts. Yes we will focus on ghosts now. You must be very powerful to keep control under them."
+		  message=_"Revenants or even ghosts. Yes we will focus on ghosts now. You must be very powerful to keep control under them."
 		[/message]
 		[message]
 		  speaker=Haldar
