--- a/For_Power/scenarios/11b_Ghosts.cfg
+++ b/For_Power/scenarios/11b_Ghosts.cfg
@@ -90,9 +90,10 @@
 	  [/ai]
 	[/side]
 	
+  {STARTING_VILLAGES_ALL 1}
+  
 	[event]
 	  name=start
-	  {STARTING_VILLAGES_ALL 1}
 	  {STORE_UNIT_VAR (id=Clare) level templevel}
 		[if]
   	  [variable]
@@ -132,6 +133,26 @@
 		[/objectives]
 	[/event]
 	
+  [event]
+    name=recall
+    first_time_only=no
+    [filter_condition]
+      [variable]
+        name=ghosts
+        less_than=6
+      [/variable]
+    [/filter_condition]
+    [message]
+      speaker=Haldar
+      message=_"I told you to recruit ghosts not to recall! Try it again!"
+    [/message]
+    [gold]
+      side=1
+      amount=18
+    [/gold]
+    {PUT_TO_RECALL_LIST id=$unit.id}
+  [/event]
+  
 	[event]
 	  name=prerecruit
 	  [message]
@@ -205,7 +226,7 @@
 		{TROLL 15 14}
 		[message]
 		  speaker=Haldar
-		  message=_"These trolls found a path to this cave. It will be a good exam of your new abilities."
+		  message=_"These trolls found a path to this cave. It will be a good exam of your new abilities. Kill them all with your servants."
 		[/message]
 		[set_recruit]
 		  side=1
@@ -255,7 +276,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"You are right. Alas you were a great apprentice. But now you do not need me."
+		  message=_"You are right. Alas you were a great apprentice. But now you do not need me from this moment."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -263,7 +284,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"You can do this on your own but I will be glad if you will visit me."
+		  message=_"You can do this on your own but I will be glad if you will visit me from time to time."
 		[/message]
 		[message]
 		  speaker=Clare
