--- a/For_Power/scenarios/14a_Heavy_Paid_Victory.cfg
+++ b/For_Power/scenarios/14a_Heavy_Paid_Victory.cfg
@@ -52,11 +52,11 @@
 	  [/message]
 	  [message]
 	    speaker=Merissa
-	    message=_"What is with you, maiden? We won. You should be happy."
+	    message=_"What is wrong with you, maiden? We won. You should be happy."
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"Yes we won but you do not know the price what I had to pay."
+	    message=_"Yes, we won but you do not know the price what I had to pay."
 	  [/message]
 	  {REPLACE_SCENARIO_MUSIC sad.ogg}
 	  [message]
@@ -82,7 +82,7 @@
 	  [message]
 	    id=Clare
 	    message=_"He gave me some potion perhaps even a poison. I do not know. Everything I know is that I was dead and I am here back."
-	  [/message] # a link to Legend of the Invicibles - Haldar gave Clare an arsenic
+	  [/message] # Haldar gave Clare an arsenic
 	  [message]
 	    speaker=Merissa
 	    message=_"I don't mind it, do you? I know you are a good girl and only this is important."
