--- a/For_Power/scenarios2/01_Return_of_troubles.cfg
+++ b/For_Power/scenarios2/01_Return_of_troubles.cfg
@@ -163,7 +163,7 @@
         [/unit]
       [/else]
     [/if]
-    {CLEAR_VARIABLE chapter_1_complete,army_store}
+    {CLEAR_VARIABLE chapter_1_complete,transfer_store}
     [store_unit]
 		  [filter]
 		    side=1
