--- a/For_Power/scenarios2/06_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/06_Dwarven_Doors.cfg
@@ -616,7 +616,7 @@
     [/message]
     [message]
       speaker=protector
-      message=_"Thank you. (reading the message) Undeads?! Ok, I will send more soldiers to the west front. Go to the dwarves and ask them for support."
+      message=_"Thank you. (reading the message) Undead?! Ok, I will send more soldiers to the west front. Go to the dwarves and ask them for support."
     [/message]
     [message]
       speaker=messenger
