--- a/For_Power/scenarios2/08_Talks_with_Ralenyth.cfg
+++ b/For_Power/scenarios2/08_Talks_with_Ralenyth.cfg
@@ -201,7 +201,7 @@
     [/message]
     [message]
      speaker=Clare
-     message=_"Our strategy is very bad. We loose too many soldiers and do not have enough supplies. But I think that I can help."
+     message=_"Our strategy is very bad. We lose too many soldiers and do not have enough supplies. But I think that I can help."
     [/message]
     [message]
       speaker=Ralenyth
@@ -226,7 +226,7 @@
     [/message]
     [message]
       speaker=Ralenyth
-      message=_"Yes, it is! You had murdered Menvan. You are just next power hungry warlock!"
+      message=_"Yes, it is! You had murdered Menvan. You are just another power hungry warlock!"
     [/message]
     [message]
       speaker=Clare
@@ -452,7 +452,7 @@
     [/filter_condition]
     [message]
       speaker=Clare
-      message=_"More undeads are coming. We are doomed."
+      message=_"More undead are coming. We are doomed."
     [/message]
   [/event]
   
