--- a/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
@@ -212,7 +212,7 @@
     [/message]
     [message]
       speaker=necro1
-      message=_"Our master does not like that you ruin his plans. He sent us to kill you, maiden."
+      message=_"Our master does not like that you you are ruining his plans. He sent us to kill you, maiden."
     [/message]
     {RECALL_HEROES}
     [message]
@@ -269,7 +269,7 @@
     [/message]
     [message]
       speaker=necro1
-      message=_"There is no one to help you, maiden."
+      message=_"There is no one to help you, witch."
     [/message]
     [message]
       speaker=Clare
@@ -288,7 +288,7 @@
     [/filter_second]
     [message]
       speaker=Clare
-      message=_"Wow. These undeads are very good even if I have no experiences with necromancy."
+      message=_"Wow. These undead are very good even if I have no experiences with necromancy."
     [/message]
   [/event]
   
@@ -417,12 +417,12 @@
     name=time over
     [message]
       speaker=Clare
-      message=_"More undeads are coming. I am doomed."
+      message=_"More undead are coming. I am doomed."
     [/message]
   [/event]
   
   # change chances to hit
-  # Clare's undeads always hit enemies' undeads but got hit always by their leaders
+  # Clare's undead always hit enemies' undead but got hit always by their leaders
   # Clare nearly always hit necromancers and got hit by them only sometimes
   {FORCE_CHANCE_TO_HIT type=Dream_Walking_Corpse (side=2,3,4 canrecruit=no) 100 ()}
   {FORCE_CHANCE_TO_HIT type=Dream_Soulless (side=2,3,4 canrecruit=no) 100 ()}
