--- a/For_Power/scenarios2/11_Back_in_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/11_Back_in_Dwarven_Doors.cfg
@@ -134,7 +134,7 @@
     [/move_unit]
     [message]
       speaker=Clare
-      message=_"Hail, Lord Protector. It is me, Clare. I was at the west front with earl Menvan's soldiers. We have won but many good men lost their lives."
+      message=_"Hail, Lord Protector. It is me, Clare. I was at the west front with earl Menvan's soldiers. We have won, but many good men lost their lives."
     [/message]
     [message]
       speaker=protector
