--- a/For_Power/scenarios2/13b_The_Underground.cfg
+++ b/For_Power/scenarios2/13b_The_Underground.cfg
@@ -220,11 +220,11 @@
     [/message]
     [message]
       speaker=Tinry
-      message=_"Did you forget these undeads accompanying us? They surely won't let us pass."
+      message=_"Did you forget these undead accompanying us? They surely won't let us pass."
     [/message]
     [message]
       speaker=Clare
-      message=_"Anyhow let us go. I do not want to spend more time here than is necessary."
+      message=_"Anyhow, let us go. I do not want to spend more time here than is necessary."
     [/message]
   [/event]
   
@@ -239,7 +239,7 @@
     [/message]
     [message]
       speaker=outlaw
-      message=_"Ok ... Wait. Aren't those things undeads? We don't want necromancers here. Guys, kill them all!"
+      message=_"Ok ... Wait. Aren't those things undead? We don't want necromancers here. Guys, kill them all!"
     [/message]
     [message]
       speaker=Clare
@@ -321,7 +321,7 @@
     [/message]
     [message]
       speaker=outlaw
-      message=_"Ok I trust you. So you want to reach the surface, right? Just follow the path to the north-west and you will see the sunlight again."
+      message=_"Ok, I trust you. So you want to reach the surface, right? Just follow the path to the north-west and you will see the sunlight again."
     [/message]
     [message]
       speaker=Merissa
@@ -345,7 +345,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_"These undeads are too strong. Flee, guys!"
+      message=_"These undead are too strong. Flee, guys!"
     [/message]
     [kill]
       side=2
@@ -367,7 +367,7 @@
     [/message]
     # she sounds very pessimistic now but in fact she does not like killing her itself.
     # she falls into the darkness and wants to stop it but now she cannot
-    # and because of it you loose.
+    # and because of it you lose.
     [endlevel]
       result=defeat
     [/endlevel] 
