--- a/For_Power/scenarios3/01_End_of_peace.cfg
+++ b/For_Power/scenarios3/01_End_of_peace.cfg
@@ -200,12 +200,12 @@
 	      {CLEAR_VARIABLE unit_count,unit_type_rolled}
       [/else]
     [/if]
-    {CLEAR_VARIABLE army_store}
+    {CLEAR_VARIABLE transfer_store}
     # a prophecy, not known by the heroes
     [message]
       speaker=narrator
       caption=_"A seer"
-      message=_"A storm is comming. Times are changing so are they. They will become much stronger but every power has its price. They will be in need of this power but it can corrupt them. They must be careful with using it."
+      message=_"A storm is comming. Times are changing so are they. They will become much stronger, but every power has its price. They will be in need of this power, but it can corrupt them. They must be careful with using it."
     [/message]
     # Amiwen can advance to a seer
     [store_unit]
@@ -253,7 +253,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"What! Yes."
+      message=_"What?! Yes."
     [/message]
     [message]
       speaker=Tinry
@@ -291,7 +291,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"We are not going to let you defile bodies of our deads. Kill him!"
+      message=_"We are not going to let you defile bodies of our dead. Kill him!"
     [/message]
     [if]
       [variable]
@@ -410,7 +410,7 @@
     name=time over
     [message]
       speaker=Clare
-      message=_"We cannot stop this fool. Our deads will never rest in peace."
+      message=_"We cannot stop this fool. Our dead will never rest in peace."
     [/message]
   [/event]
   
@@ -433,7 +433,7 @@
     [/filter]
     [message]
       speaker=Clare
-      message=_"No you cannot die!"
+      message=_"No, you cannot die!"
     [/message]
     {DEFEAT}
   [/event]
