--- a/For_Power/scenarios3/06_Morbivords_Castle.cfg
+++ b/For_Power/scenarios3/06_Morbivords_Castle.cfg
@@ -305,7 +305,7 @@
     [/filter]
     [message]
       speaker=Morbivord
-      message=_"They are getting closer to us. We need more undeads."
+      message=_"They are getting closer to us. We need more undead."
     [/message]
     [message]
       speaker=Heldra
@@ -364,7 +364,7 @@
     name=time over
     [message]
       speaker=Clare
-      message=_"This is hopeless. We will never escape and they will kill us."
+      message=_"This is hopeless. We will never escape and they will kill us both."
     [/message]
   [/event]
   
