--- a/For_Power/scenarios3/07_Back_in_underground.cfg
+++ b/For_Power/scenarios3/07_Back_in_underground.cfg
@@ -310,7 +310,7 @@
     [/redraw]
     [message]
       speaker=Clare
-      message=_"He looks very badly. I worry that he can die in every moment."
+      message=_"He looks very badly. I am worried that he can die in every moment."
     [/message]
     [message]
       speaker=Clare
