--- a/For_Power/scenarios3/09_To_Morbivords_Castle.cfg
+++ b/For_Power/scenarios3/09_To_Morbivords_Castle.cfg
@@ -96,7 +96,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"We should prepare to battle."
+      message=_"We should prepare for battle."
     [/message]
     [message]
       speaker=enemy
