--- a/For_Power/scenarios3/10_Final_Confrontation.cfg
+++ b/For_Power/scenarios3/10_Final_Confrontation.cfg
@@ -430,7 +430,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"It would occurr to them."
+      message=_"They would not do such a fooling thing."
     [/message]
     [message]
       speaker=Lethalia
@@ -446,7 +446,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"You are trying to intimidate us. It is quite clear to me that either cooperate with Ravanalom, or is just a pawn in your plan to destroy all civilization."
+      message=_"You are trying to intimidate us. It is quite clear to me that either cooperate with Ravanal, or he is just a pawn in your plan to destroy all civilization."
     [/message]
     [message]
       speaker=Lethalia
@@ -462,7 +462,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"Over the centuries your power just corrupted you. You have prepared treats that compel people to follow you. But we will not be tricked. We know how crowds manipulation works."
+      message=_"Over the centuries your power have just corrupted you. You have prepared treats that compel people to follow you. But we will not be tricked. We know how crowd manipulation works."
     [/message]
     [message]
       speaker=Lethalia
@@ -478,7 +478,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"I can not imagine that such evil walks this world for centuries, and no one stopped him yet. We will make legendary acts ... Prepare for death monster."
+      message=_"I can not imagine that such evil walks this world for centuries, and no one stopped her yet. We will make legendary acts ... Prepare for death monster."
     [/message]
     [message]
       speaker=Lethalia
@@ -486,7 +486,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"This can scare small children but not us. On her!"
+      message=_"This can scare small children, but not us. On her!"
     [/message]
     {UNMAKE_HERO Lethalia}
     {MODIFY_UNIT id=Lethalia side 3}
@@ -521,6 +521,7 @@
   [/event]
   
   [event]
+    name=last breath
     [filter]
       id=Lethalia
       side=1
