--- a/For_Power/scenarios4/01_Searching_adventures.cfg
+++ b/For_Power/scenarios4/01_Searching_adventures.cfg
@@ -281,7 +281,7 @@
 	      {CLEAR_VARIABLE unit_count,unit_type_rolled}
       [/else]
     [/if]
-    {CLEAR_VARIABLE army_store}
+    {CLEAR_VARIABLE transfer_store}
     # Tinry and Amiwen are not with Clare at start of this chapter, they will join her later
     [store_unit]
       [filter]
@@ -501,7 +501,7 @@
     [/message]
     [message]
       speaker=mayor
-      message=_"Actually, we have to face two problems - undeads and bandits. A wicked necromancer came into a swamp east from here a month ago."
+      message=_"Actually, we have to face two problems - undead and bandits. A wicked necromancer came into a swamp east from here a month ago."
     [/message]
     [message]
       speaker=Jolla
@@ -521,11 +521,11 @@
     [/message]
     [message]
       speaker=mayor
-      message=_"You are right but bandits mean a bigger problem. At least for us, alive people. They attack caravans transporting food supplies and sometimes kill people who walk alone."
+      message=_"You are right but bandits mean a bigger problem. At least for us, living people. They attack caravans transporting food supplies and sometimes kill people who walk alone."
     [/message]
     [message]
       speaker=mayor
-      message=_"I can't send my soldiers against the necromancer because the bandits could attack us and vica versa. You seem to be very powerfull. Can you help us, please?"
+      message=_"I can't send my soldiers against the necromancer because the bandits could attack us and vica versa. You seem to be very powerful. Can you help us, please?"
     [/message]
     [message]
       speaker=Clare
