--- a/For_Power/scenarios4/03_The_Swamp.cfg
+++ b/For_Power/scenarios4/03_The_Swamp.cfg
@@ -131,7 +131,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"I have no idea. I never encounter such a creature. But I am pretty sure that nothing good. Destroy it!"
+      message=_"I have no idea. I have never encountered such a creature. But I am pretty sure that nothing good. Destroy it!"
     [/message]
   [/event]
   
@@ -239,7 +239,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"I would rather send you into the fiery wastelands of Inferno than the land of dead, monster. Here belongs your kind."
+      message=_"I would rather send you into the fiery wastelands of Inferno than the land of dead, monster. There your kind belongs."
     [/message]
     [message]
       speaker=unit
