--- a/For_Power/units/Merissa_Lich.cfg
+++ b/For_Power/units/Merissa_Lich.cfg
@@ -427,7 +427,7 @@
 		  number=3
 		  type=cold
 		  name=chill tempest
-		  description= _"chill tempest"
+		  description={STR_CHILL_TEMPEST}
 		  icon=attacks/iceball.png
 		  range=ranged
 		  [specials]
