wescamp.py: Update from add-on server

--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -150,7 +150,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Is it you who is saying such a think?"
+		  message=_"Is it you who is saying such a thing?"
 		[/message]
 		[message]
 		  speaker=Tinry
@@ -270,7 +270,6 @@
 		  speaker=Merissa
 		  message=_"You are welcome. And one thing I heard someone saw some monsters in the river. I never saw them but be careful."
 		[/message]
-		{VARIABLE merissa_alive yes}
     {TENTACLE 9 11}
     {TENTACLE 11 11}
     {TENTACLE 14 12}
