--- a/For_Power/scenarios/Epilogue_a.cfg
+++ b/For_Power/scenarios/Epilogue_a.cfg
@@ -40,10 +40,10 @@
   
   [story]
     [part]
-      story = _ "After defeating the sovereign the orcs continued a civil war and stopped to attack human's villages."
+      story = _ "After the defeat of their sovereign the orcs continued their civil war and stopped attacking human villages."
     [/part]
     [part]
-      story = _ "The villages what they destroyed was rebuilt and humans settled them again. Peace was ruling the Northlands."
+      story = _ "The villages that had been destroyed were rebuilt and humans settled them again. Peace was ruling the Northlands."
     [/part]
     [part]
       story = _ "Clare and Lemyr lived peacefuly in their village and were happy. And nothing could break it."
