--- a/For_Power/scenarios/08_The_Teacher.cfg
+++ b/For_Power/scenarios/08_The_Teacher.cfg
@@ -73,7 +73,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"An orc assassinated our village's sergant. I will avange him with your help."
+		  message=_"An orc assassinated our village's sergant. I will avenge him with your help."
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -89,15 +89,15 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"You are a powerful mage. You can teach me lot of thinks."
+		  message=_"You are a powerful mage. You can teach me many things."
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Yes I know some useful spells, but you won't like them."
+		  message=_"Yes I know some useful spells, but you will not like them."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"What do you think?"
+		  message=_"What makes you think that?"
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -128,7 +128,7 @@
 		  speaker=Haldar
 		  message=_"So what are you going to do?"
 		  [option]
-		    message=_"You are the evil. I have no another option then kill you!"
+		    message=_"You are the evil. I have no another option than kill you!"
 		    [command]
 		      [fire_event]
 		        name=path1
@@ -136,7 +136,7 @@
 		    [/command]
 		  [/option]
 		  [option]
-		    message=_"Maybe it is not good, but there is not another path. I must make him pay at any cost."
+		    message=_"Maybe it is not good, but there is no other path. I must make him pay whatever the cost."
 		    [command]
 		      [fire_event]
 		        name=path2
@@ -186,7 +186,7 @@
 	  {STORE_UNIT_VAR id=Clare level templevel}
 	  [message]
 		  speaker=Haldar
-		  message=_"You gained some power but you are still weak. But at the other hand I am not interested in harming you."
+		  message=_"You gained some power but you are still weak. But on the other hand I am not interested in harming you."
 		  [show_if]
 		    [variable]
 		      name=templevel
@@ -196,7 +196,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"You gained great power but you are not a challenge for me. But at the other hand I am not interested in harming you."
+		  message=_"You gained great power but you are not a challenge for me. But on the other hand I am not interested in harming you."
 		  [show_if]
 		    [variable]
 		      name=templevel
@@ -207,8 +207,8 @@
 		{CLEAR_VARIABLE templevel}
 		[message]
 		  speaker=Haldar
-		  message=_"You can leave if you want. I hoped that I will teach you but you changed your decision. Good bye then."
-		[/message] # yes he don't want to harm her maybe he isn't a really bad guy
+		  message=_"You can leave if you want. I hoped that I would teach you but you changed your decision. Good bye then."
+		[/message] # yes he doesn't want to harm her maybe he isn't a really bad guy
 		{VARIABLE path_chosen 1}
 	  [endlevel]
 		  result=victory
