--- a/For_Power/scenarios/09a_Bandits.cfg
+++ b/For_Power/scenarios/09a_Bandits.cfg
@@ -57,7 +57,7 @@
 	  [/message]
 	  [message]
 	    speaker=Mubryn
-	    message=_"Tinry and Merissa? I didn't see you for a long time. Why are you here?"
+	    message=_"Tinry and Merissa? I haven't seen you for a long time. Why are you here?"
 	  [/message]
 	  [message]
 	    speaker=Tinry
@@ -105,7 +105,7 @@
 	  [/message]
 	  [message]
 	    speaker=Mubryn
-	    message=_"So we have a deal then. Guys, prepare yourself. We are leaving at the moment."
+	    message=_"So we have a deal then. Guys, prepare yourself. We are leaving immediately."
 	  [/message]
 	  {MODIFY_UNIT id=Mubryn canrecruit no}
 	  {MAKE_HERO Mubryn}
