--- a/For_Power/scenarios/10a_An_Exercise.cfg
+++ b/For_Power/scenarios/10a_An_Exercise.cfg
@@ -95,7 +95,7 @@
 	  name=time over
 	  [message]
 	    speaker=Clare
-	    message=_"We lost a lot of time here. I cannot find his path anymore."
+	    message=_"We lost a lot of time here. I cannot find his tracks anymore."
 	  [/message]
 	  [endlevel]
 		  result=defeat
