--- a/For_Power/scenarios/10b_Skeletons.cfg
+++ b/For_Power/scenarios/10b_Skeletons.cfg
@@ -184,7 +184,7 @@
 		[/modify_unit]
 		[message]
 		  speaker=Clare
-		  message=_"Is this right? He could rest."
+		  message=_"Is this right? He should rest."
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -231,7 +231,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Revenants or even ghosts. Yes we will focus on ghosts now. You must be very powerful to keep control under them."
+		  message=_"Revenants or even ghosts. Yes we will focus on ghosts now. You must be very powerful to keep control over them."
 		[/message]
 		[message]
 		  speaker=Haldar
