--- a/For_Power/scenarios/15a_Back_Home.cfg
+++ b/For_Power/scenarios/15a_Back_Home.cfg
@@ -86,7 +86,7 @@
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"If you say it then they can enter the village."
+	    message=_"If you say so. They can enter the village."
 	  [/message]
 	  [move_unit]
 		  id=Tinry
@@ -113,7 +113,7 @@
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"Yes, there was not another assassinating here."
+	    message=_"There have been no more assassinations here."
 	  [/message]
 	  [message]
 	    id=Clare
@@ -151,19 +151,19 @@
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"What? Ehhm to be honest yes. I love you for a long time but I could not say it to you. Alas I expected nothing from you."
+	    message=_"What? Ehhm to be honest yes. I have loved you for a long time but I could not say it. Alas I expected nothing from you."
 	  [/message] # he loved her for the years before this campaign begun
 	  [message]
 	    id=Clare
-	    message=_"I love you too, Lemyr. I do not know how did it happened but it is truth."
+	    message=_"I love you too, Lemyr. I do not know how it happened but it is true."
 	  [/message] # I don't know it as well yet but the things sometime happend
 	  [message]
 	    id=Lemyr
-	    message=_"It is the happiest day in my life."
+	    message=_"It is the happiest day of my life."
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"In mine too. I do not want to leave you anymore."
+	    message=_"Of mine too. I do not want to leave you again."
 	  [/message]
 	  # give her back her village soldiers and villagers
 	  {FOREACH villagers_store TEMP_i}
