--- a/For_Power/scenarios/16b_Preserving.cfg
+++ b/For_Power/scenarios/16b_Preserving.cfg
@@ -66,11 +66,11 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Do not interupt me. You must say some words before you die. Alas you do not want to look like 'a pack of bones' so you have to drink the poison first, cause your death and during dying cast a spell which bring your soul into your body after your death again."
+		  message=_"Do not interupt me. You must say some words before you die. Since you do not want to look like 'a pack of bones' you have to drink the poison first. It will cause your death and while you are dying you must cast a spell which will return your soul into your body after your death."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"So how to start?"
+		  message=_"So how do we start?"
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -97,11 +97,11 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Here are you your magic words. (he gave her a piece of paper with some words in a forgein language.)"
+		  message=_"Here are you your magic words. (he gives her a piece of paper with some words in a forgein language.)"
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Are you sure that these words are the ones? I do not want to die unnecessarily."
+		  message=_"Are you sure that these words are the right ones? I do not want to die unnecessarily."
 		[/message]
 		[message]
 		  speaker=Haldar
