--- a/For_Power/scenarios/17b_Am_I_welcomed_at_home.cfg
+++ b/For_Power/scenarios/17b_Am_I_welcomed_at_home.cfg
@@ -77,7 +77,7 @@
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"Thanks to gods. I thought you were dead."
+	    message=_"Thanks be to the gods. I thought that you were dead."
 	  [/message] # actually she is dead in every case
 	  [message]
 	    id=Clare
@@ -102,15 +102,15 @@
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"I am sorry. But the orc is a history."
+	    message=_"I am sorry. But the orc is history."
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"It is good news. I worried that someone could harm you."
+	    message=_"That is good news. I was worried that some harm had come to you."
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"It is nice but you do not have to worry about me. I am a mage, you know."
+	    message=_"That is nice but you do not have to worry about me. I am a mage, you know."
 	  [/message]
 	  [message]
 	    id=Lemyr
@@ -136,7 +136,7 @@
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"I met them on my path to Haldar. They helped me. They are not so bad as they may seem."
+	    message=_"I met them on my way to Haldar. They helped me. They are not as bad as they seem."
 	  [/message]
 	  [message]
 	    id=Lemyr
@@ -144,15 +144,15 @@
 	  [/message]
 	  [message]
 	    id=Tinry
-	    message=_"We wanted to say hallo to Clare and ask how is she."
+	    message=_"We wanted to say hello to Clare and ask how she is."
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"I am fine. But did you really travel to here just to say hallo?"
+	    message=_"I am fine. But did you really travel to here just to say hello?"
 	  [/message]
 	  [message]
 	    id=Merissa
-	    message=_"We didn't see you from the moment when you visited Haldar. We wanted to know that you are ok."
+	    message=_"We haven't seen you since you visited Haldar. We wanted to make sure that you are ok."
 	  [/message]
 	  [message]
 	    id=Clare
@@ -164,7 +164,7 @@
 	  [/message]
 	  [message]
 	    id=Merissa
-	    message=_"He don't have a good reputation even among the outlaws. I don't know hard facts."
+	    message=_"He doesn't have a good reputation, even among the outlaws. I don't know the hard facts."
 	  [/message]
 	  [message]
 	    id=Lemyr
@@ -176,7 +176,7 @@
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"If you think. But what you, bandits? What are going to do?"
+	    message=_"If you say so. But what of you, bandits? What are you going to do?"
 	  [/message]
 	  [message]
 	    id=Tinry
@@ -184,7 +184,7 @@
 	  [/message]
 	  [message]
 	    id=Lemyr
-	    message=_"You helped Clare so I think that you may. But I am watching you."
+	    message=_"You helped Clare so you may. But I am watching you."
 	  [/message]
 	  [message]
 	    id=Tinry
