--- a/For_Power/scenarios/18b_The_Truth.cfg
+++ b/For_Power/scenarios/18b_The_Truth.cfg
@@ -136,7 +136,7 @@
 		[/message]
 		[message]
 			speaker=orc2
-			message=_"Yes. Give her to us and we leave you."
+			message=_"Yes. Give her to us and we will leave you."
 		[/message]
 		[message]
 			speaker=Lemyr
@@ -152,7 +152,7 @@
 		[/message]
 		[message]
 	    id=Clare
-	    message=_"Lemyr, they do not tell lies. I needed to be a necromancer to defeat the orc. But I did not interupt a rest of any dead for weeks. I abandoned this terrible art."
+	    message=_"Lemyr, they do not tell lies. I needed to be a necromancer to defeat the orc. But I have not interupted the rest of any dead for weeks. I have abandoned this terrible art."
 	  [/message]
 	  [message]
 			speaker=Tinry
@@ -200,11 +200,11 @@
 	  name=enemies defeated
 	  [message]
 			speaker=Lemyr
-			message=_"So our village is in safety again."
+			message=_"So our village is safe again."
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"Alas we must have a talk, Clare. Come to me."
+			message=_"We must have a talk, Clare. Come to me."
 		[/message]
 		[teleport]
       [filter]
@@ -239,11 +239,11 @@
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"I did not want this path, but there was not another."
+	    message=_"I did not want this path, but there was no other."
 	  [/message]
 	  [message]
 			speaker=Lemyr
-			message=_"Always there is an an other path but who did you teach it?"
+			message=_"Always there is an other path but who taught you it?"
 		[/message]
 		[message]
 	    speaker=Clare
@@ -251,11 +251,11 @@
 	  [/message]
 	  [message]
 			speaker=Lemyr
-			message=_"No! I could not let you to go to him."
+			message=_"No! I should not let you to go to him."
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"You could not know it. Anyone could not."
+	    message=_"You could not know. No one could have."
 	  [/message]
 	  [message]
 			speaker=Lemyr
@@ -267,7 +267,7 @@
 	  [/message]
 	  [message]
 			speaker=Lemyr
-			message=_"Maybe not because he belive that no one here would even try it. If is it truth..."
+			message=_"Maybe not because he belived that no one here would even try it. If is it truth..."
 		[/message]
 		[message]
 	    speaker=Clare
@@ -279,15 +279,15 @@
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"Yes, it is. I am a lich."
+	    message=_"Yes, there is. I am a lich."
 	  [/message]
 	  [message]
 			speaker=Lemyr
-			message=_"Do not even joke about this! This is impossible."
+			message=_"Do not even joke about that! It is impossible."
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"This is possible. I drank a poison which makes my body look like it did the day I died."
+	    message=_"It is possible. I drank a poison which makes my body look like it did the day I died."
 	  [/message]
 	  [message]
 			speaker=Lemyr
@@ -295,7 +295,7 @@
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"Yes. Haldar told me about this option."
+	    message=_"Yes. Haldar told me about it."
 	  [/message]
 	  [message]
 			speaker=Lemyr
@@ -303,7 +303,7 @@
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"He did nothing. You do not hate him. It is all because of me."
+	    message=_"He did nothing. Do not hate him. It is all because of me."
 	  [/message]
 	  [message]
 			speaker=Lemyr
@@ -311,7 +311,7 @@
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"Do you love me? I had no idea about this."
+	    message=_"Do you love me? I had no idea."
 	  [/message]
 	  [message]
 			speaker=Lemyr
@@ -319,7 +319,7 @@
 		[/message]
 		[message]
 	    speaker=Clare
-	    message=_"If I know well, he does."
+	    message=_"As far as I know, he does."
 	  [/message]
 	  [message]
 			speaker=Lemyr
