--- a/For_Power/scenarios/19b_The_Necromancer.cfg
+++ b/For_Power/scenarios/19b_The_Necromancer.cfg
@@ -99,15 +99,15 @@
 	  {PALADIN 8 10 pal5}
 	  [message]
 	    speaker=Haldar
-	    message=_"You must be Lemyr. Clare spoke about you sometimes."
+	    message=_"You must be Lemyr. Clare spoke about you."
 	  [/message]
 	  [message]
 	    speaker=Lemyr
-	    message=_"You will pay for everything what did you throw her into."
+	    message=_"You will pay for everything what did to her."
 	  [/message]
 	  [message]
 	    speaker=Haldar
-	    message=_"I threw her into nothing. It was her choice."
+	    message=_"I did nothing to her. It was her own choice."
 	  [/message]
 	  [message]
 	    speaker=Lemyr
@@ -218,7 +218,7 @@
 	  [/kill]
 	  [message]
 			speaker=Clare
-			message=_"So it is done. Let us go out of this place."
+			message=_"So it is done. Let us leave of this place."
 		[/message]
 		[message]
 	    speaker=Lemyr
