--- a/For_Power/scenarios2/09_Return_to_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/09_Return_to_Dwarven_Doors.cfg
@@ -63,7 +63,8 @@
     
 		{FLAG_VARIANT knalgan}
 		{GOLD 100 120 150}
-		{INCOME 0 1 2}
+		{INCOME 2 3 4}
+    village_gold=0
     hidden=yes
     
     [ai]
@@ -113,8 +114,6 @@
     name=start
     {RECALL_HEROES}
     {CAPTURE_VILLAGE 1 4 9}
-    {CAPTURE_VILLAGE 1 12 11}
-    {CAPTURE_VILLAGE 1 12 8}
     {CAPTURE_VILLAGE 2 26 4}
     {CAPTURE_VILLAGE 2 29 5}
     {CAPTURE_VILLAGE 2 31 11}
