--- a/For_Power/utils/chapter1.cfg
+++ b/For_Power/utils/chapter1.cfg
@@ -222,7 +222,7 @@
       story= _ "After they defeated the rest of the orcs the peaceful times returned to their village. They started to be bored."
     [/part]
     [part]
-      story= _ "But some day an older mage visited them."
+      story= _ "But one day an older mage visited them."
     [/part]
   [/story]
 #enddef
