--- a/For_Power/utils/chapter2.cfg
+++ b/For_Power/utils/chapter2.cfg
@@ -99,7 +99,7 @@
     [/message]
     [message]
       speaker=unit
-      message=_"No. My days is at the end."
+      message=_"No. My days are at the end."
     [/message]
     {DEFEAT}
   [/event]
@@ -149,10 +149,10 @@
 #define STORY6
   [story]
     [part]
-      story = _ "So Clare left her village to find and kill the orc who assassinated Glacyn. She knew that she cannot do with only herself so she went to Haldar."
+      story = _ "So Clare left her village to find and kill the orc who assassinated Glacyn. She knew that she could not do it alone, so she went to Haldar."
     [/part]
     [part]
-      story = _ "But her journey was not as peaceful as she expexted."
+      story = _ "But her journey was not as peaceful as she expected."
     [/part]
   [/story]
 #enddef
@@ -160,7 +160,7 @@
 #define STORY7
   [story]
     [part]
-      story = _ "Clare did not have a good feeling about travelling with these bandits but she knew that there was not an another way."
+      story = _ "Clare did not have a good feeling about travelling with these bandits but she knew that there was no other way."
     [/part]
     [part]
       story = _ "Finally they came to Arkan Thoria."
@@ -171,7 +171,7 @@
 #define STORY9a
   [story]
     [part]
-      story = _ "Clare was sure that her decision was right. She knew that her resources are lesser than they could be but that path was wrong."
+      story = _ "Clare was sure that her decision was right. She knew that her resources are less than they could be but that path was wrong."
     [/part]
     [part]
       story = _ "So she decided to ask some bandits for help."
@@ -182,7 +182,7 @@
 #define STORY9b
   [story]
     [part]
-      story = _ "Clare was not sure about her decision but she did not see another way. But she was again a good student and one day she recieved a lesson about raising corpses."
+      story = _ "Clare was not sure about her decision but she did not see another way. But she was still a good student and one day she recieved a lesson about raising corpses."
     [/part]
   [/story]
 #enddef
@@ -206,7 +206,7 @@
 #define STORY12
   [story]
     [part]
-      story = _ "Finally Clare found the city where the assassin was hidding."
+      story = _ "Finally Clare found the city where the assassin was hiding."
     [/part]
   [/story]
 #enddef
@@ -230,7 +230,7 @@
 #define STORY15b
   [story]
     [part]
-      story = _ "After Haldar said Clare where to find a dragon and gave her a spell she teleported to his place."
+      story = _ "After Haldar told Clare where to find a dragon and had given her a spell she teleported to the place."
     [/part]
   [/story]
 #enddef
