--- a/For_Power/utils3/deaths.cfg
+++ b/For_Power/utils3/deaths.cfg
@@ -76,7 +76,7 @@
     [/filter]
     [message]
       speaker=unit
-      message=_"No. My days is at the end."
+      message=_"No. My days are at the end."
     [/message]
     {DEFEAT}
   [/event]
